Apply Language Engine formatter under style=intellij
Single bulk apply of the Language Engine's IntelliJ-style format
profile across the kafka source tree. Pairs with the IntelliJ-real
control branch `intellij-formatting` for side-by-side comparison
of LE's IntelliJ output against IntelliJ's own reformat.

Stats: 3101 files written, 0 failures, 2678 already-idempotent
files skipped (no_change).