@@ -102,69 +102,69 @@ class StreamsGroupHeartbeatRequestManagerTest {
     private static final String REPARTITION_SINK_TOPIC_2 = "repartitionSinkTopic2";
     private static final String REPARTITION_SINK_TOPIC_3 = "repartitionSinkTopic3";
     private static final Set<String> REPARTITION_SINK_TOPICS = Set.of(
-        REPARTITION_SINK_TOPIC_1,
-        REPARTITION_SINK_TOPIC_2,
-        REPARTITION_SINK_TOPIC_3
+            REPARTITION_SINK_TOPIC_1,
+            REPARTITION_SINK_TOPIC_2,
+            REPARTITION_SINK_TOPIC_3
     );
     private static final String REPARTITION_SOURCE_TOPIC_1 = "repartitionSourceTopic1";
     private static final String REPARTITION_SOURCE_TOPIC_2 = "repartitionSourceTopic2";
     private static final Map<String, StreamsRebalanceData.TopicInfo> REPARTITION_SOURCE_TOPICS = Map.of(
-        REPARTITION_SOURCE_TOPIC_1, new StreamsRebalanceData.TopicInfo(Optional.of(2), Optional.of((short) 1), Map.of("config3", "value3", "config1", "value1")),
-        REPARTITION_SOURCE_TOPIC_2, new StreamsRebalanceData.TopicInfo(Optional.of(3), Optional.of((short) 3), Collections.emptyMap())
+            REPARTITION_SOURCE_TOPIC_1, new StreamsRebalanceData.TopicInfo(Optional.of(2), Optional.of((short) 1), Map.of("config3", "value3", "config1", "value1")),
+            REPARTITION_SOURCE_TOPIC_2, new StreamsRebalanceData.TopicInfo(Optional.of(3), Optional.of((short) 3), Collections.emptyMap())
     );
     private static final String CHANGELOG_TOPIC_1 = "changelogTopic1";
     private static final String CHANGELOG_TOPIC_2 = "changelogTopic2";
     private static final String CHANGELOG_TOPIC_3 = "changelogTopic3";
     private static final Map<String, StreamsRebalanceData.TopicInfo> CHANGELOG_TOPICS = Map.of(
-        CHANGELOG_TOPIC_1, new StreamsRebalanceData.TopicInfo(Optional.empty(), Optional.of((short) 1), Map.of()),
-        CHANGELOG_TOPIC_2, new StreamsRebalanceData.TopicInfo(Optional.empty(), Optional.of((short) 2), Map.of()),
-        CHANGELOG_TOPIC_3, new StreamsRebalanceData.TopicInfo(Optional.empty(), Optional.of((short) 3), Map.of("config4", "value4", "config2", "value2"))
+            CHANGELOG_TOPIC_1, new StreamsRebalanceData.TopicInfo(Optional.empty(), Optional.of((short) 1), Map.of()),
+            CHANGELOG_TOPIC_2, new StreamsRebalanceData.TopicInfo(Optional.empty(), Optional.of((short) 2), Map.of()),
+            CHANGELOG_TOPIC_3, new StreamsRebalanceData.TopicInfo(Optional.empty(), Optional.of((short) 3), Map.of("config4", "value4", "config2", "value2"))
     );
     private static final Collection<Set<String>> COPARTITION_GROUP = Set.of(
-        Set.of(SOURCE_TOPIC_1, REPARTITION_SOURCE_TOPIC_2),
-        Set.of(SOURCE_TOPIC_2, REPARTITION_SOURCE_TOPIC_1)
+            Set.of(SOURCE_TOPIC_1, REPARTITION_SOURCE_TOPIC_2),
+            Set.of(SOURCE_TOPIC_2, REPARTITION_SOURCE_TOPIC_1)
     );
     private static final String SUBTOPOLOGY_NAME_1 = "subtopology1";
     private static final StreamsRebalanceData.Subtopology SUBTOPOLOGY_1 = new StreamsRebalanceData.Subtopology(
-        SOURCE_TOPICS,
-        REPARTITION_SINK_TOPICS,
-        REPARTITION_SOURCE_TOPICS,
-        CHANGELOG_TOPICS,
-        COPARTITION_GROUP
+            SOURCE_TOPICS,
+            REPARTITION_SINK_TOPICS,
+            REPARTITION_SOURCE_TOPICS,
+            CHANGELOG_TOPICS,
+            COPARTITION_GROUP
     );
     private static final String SUBTOPOLOGY_NAME_2 = "subtopology2";
     private static final String SOURCE_TOPIC_3 = "sourceTopic3";
     private static final String CHANGELOG_TOPIC_4 = "changelogTopic4";
     private static final StreamsRebalanceData.Subtopology SUBTOPOLOGY_2 = new StreamsRebalanceData.Subtopology(
-        Set.of(SOURCE_TOPIC_3),
-        Set.of(),
-        Map.of(),
-        Map.of(CHANGELOG_TOPIC_4, new StreamsRebalanceData.TopicInfo(Optional.empty(), Optional.of((short) 1), Map.of())),
-        Collections.emptyList()
+            Set.of(SOURCE_TOPIC_3),
+            Set.of(),
+            Map.of(),
+            Map.of(CHANGELOG_TOPIC_4, new StreamsRebalanceData.TopicInfo(Optional.empty(), Optional.of((short) 1), Map.of())),
+            Collections.emptyList()
     );
     private static final Map<String, StreamsRebalanceData.Subtopology> SUBTOPOLOGIES =
-        Map.of(
-            SUBTOPOLOGY_NAME_1, SUBTOPOLOGY_1,
-            SUBTOPOLOGY_NAME_2, SUBTOPOLOGY_2
+            Map.of(
+                SUBTOPOLOGY_NAME_1, SUBTOPOLOGY_1,
+                SUBTOPOLOGY_NAME_2, SUBTOPOLOGY_2
         );
     private static final String CLIENT_TAG_1 = "client-tag1";
     private static final String VALUE_1 = "value1";
     private static final Map<String, String> CLIENT_TAGS = Map.of(CLIENT_TAG_1, VALUE_1);
     private static final List<StreamsGroupHeartbeatResponseData.EndpointToPartitions> ENDPOINT_TO_PARTITIONS =
-        List.of(
-            new StreamsGroupHeartbeatResponseData.EndpointToPartitions()
+            List.of(
+                new StreamsGroupHeartbeatResponseData.EndpointToPartitions()
                 .setUserEndpoint(new StreamsGroupHeartbeatResponseData.Endpoint().setHost("localhost").setPort(8080))
                 .setActivePartitions(List.of(
-                    new StreamsGroupHeartbeatResponseData.TopicPartition().setTopic("topic").setPartitions(List.of(0)))
+                        new StreamsGroupHeartbeatResponseData.TopicPartition().setTopic("topic").setPartitions(List.of(0)))
                 )
         );
 
     private final StreamsRebalanceData streamsRebalanceData = new StreamsRebalanceData(
-        PROCESS_ID,
-        Optional.of(ENDPOINT),
-        Optional.of(RACK_ID),
-        SUBTOPOLOGIES,
-        CLIENT_TAGS
+            PROCESS_ID,
+            Optional.of(ENDPOINT),
+            Optional.of(RACK_ID),
+            SUBTOPOLOGIES,
+            CLIENT_TAGS
     );
 
     private final Time time = new MockTime();
@@ -187,14 +187,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testConstructWithNullCoordinatorRequestManager() {
         final Exception exception = assertThrows(NullPointerException.class, () -> new StreamsGroupHeartbeatRequestManager(
-            new LogContext("test"),
-            time,
-            config,
-            null,
-            membershipManager,
-            backgroundEventHandler,
-            metrics,
-            streamsRebalanceData
+                new LogContext("test"),
+                time,
+                config,
+                null,
+                membershipManager,
+                backgroundEventHandler,
+                metrics,
+                streamsRebalanceData
         ));
         assertEquals("Coordinator request manager cannot be null", exception.getMessage());
     }
@@ -202,14 +202,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testConstructWithNullMembershipManager() {
         final Exception exception = assertThrows(NullPointerException.class, () -> new StreamsGroupHeartbeatRequestManager(
-            new LogContext("test"),
-            time,
-            config,
-            coordinatorRequestManager,
-            null,
-            backgroundEventHandler,
-            metrics,
-            streamsRebalanceData
+                new LogContext("test"),
+                time,
+                config,
+                coordinatorRequestManager,
+                null,
+                backgroundEventHandler,
+                metrics,
+                streamsRebalanceData
         ));
         assertEquals("Streams membership manager cannot be null", exception.getMessage());
     }
@@ -217,14 +217,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testConstructWithNullBackgroundEventHandler() {
         final Exception exception = assertThrows(NullPointerException.class, () -> new StreamsGroupHeartbeatRequestManager(
-            new LogContext("test"),
-            time,
-            config,
-            coordinatorRequestManager,
-            membershipManager,
-            null,
-            metrics,
-            streamsRebalanceData
+                new LogContext("test"),
+                time,
+                config,
+                coordinatorRequestManager,
+                membershipManager,
+                null,
+                metrics,
+                streamsRebalanceData
         ));
         assertEquals("Background event handler cannot be null", exception.getMessage());
     }
@@ -232,14 +232,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testConstructWithNullMetrics() {
         final Exception exception = assertThrows(NullPointerException.class, () -> new StreamsGroupHeartbeatRequestManager(
-            new LogContext("test"),
-            time,
-            config,
-            coordinatorRequestManager,
-            membershipManager,
-            backgroundEventHandler,
-            null,
-            streamsRebalanceData
+                new LogContext("test"),
+                time,
+                config,
+                coordinatorRequestManager,
+                membershipManager,
+                backgroundEventHandler,
+                null,
+                streamsRebalanceData
         ));
         assertEquals("Metrics cannot be null", exception.getMessage());
     }
@@ -247,14 +247,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testConstructWithNullStreamsRebalanceData() {
         final Exception exception = assertThrows(NullPointerException.class, () -> new StreamsGroupHeartbeatRequestManager(
-            new LogContext("test"),
-            time,
-            config,
-            coordinatorRequestManager,
-            membershipManager,
-            backgroundEventHandler,
-            metrics,
-            null
+                new LogContext("test"),
+                time,
+                config,
+                coordinatorRequestManager,
+                membershipManager,
+                backgroundEventHandler,
+                metrics,
+                null
         ));
         assertEquals("Streams rebalance data cannot be null", exception.getMessage());
     }
@@ -302,7 +302,7 @@ class StreamsGroupHeartbeatRequestManagerTest {
         assertEquals(0, result.unsentRequests.size());
         verify(membershipManager).onHeartbeatRequestSkipped();
         verify(backgroundEventHandler).add(argThat(
-            errorEvent -> errorEvent instanceof ErrorEvent && ((ErrorEvent) errorEvent).error() == fatalError));
+                errorEvent -> errorEvent instanceof ErrorEvent && ((ErrorEvent) errorEvent).error() == fatalError));
     }
 
     @ParameterizedTest
@@ -310,13 +310,13 @@ class StreamsGroupHeartbeatRequestManagerTest {
     public void testSendingHeartbeatIfMemberIsLeaving(final boolean requestInFlight) {
         final long heartbeatIntervalMs = 1234;
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> {
-                    when(mock.canSendRequest(time.milliseconds())).thenReturn(false);
-                    when(mock.heartbeatIntervalMs()).thenReturn(heartbeatIntervalMs);
-                    when(mock.requestInFlight()).thenReturn(requestInFlight);
-                });
+             final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> {
+                        when(mock.canSendRequest(time.milliseconds())).thenReturn(false);
+                        when(mock.heartbeatIntervalMs()).thenReturn(heartbeatIntervalMs);
+                        when(mock.requestInFlight()).thenReturn(requestInFlight);
+                    });
              final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(Timer.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
@@ -337,12 +337,12 @@ class StreamsGroupHeartbeatRequestManagerTest {
     public void testSendingHeartbeatIfMemberIsJoiningOrAcknowledging(final MemberState memberState) {
         final long heartbeatIntervalMs = 1234;
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> {
-                    when(mock.canSendRequest(time.milliseconds())).thenReturn(false);
-                    when(mock.heartbeatIntervalMs()).thenReturn(heartbeatIntervalMs);
-                });
+             final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> {
+                        when(mock.canSendRequest(time.milliseconds())).thenReturn(false);
+                        when(mock.heartbeatIntervalMs()).thenReturn(heartbeatIntervalMs);
+                    });
              final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(Timer.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
@@ -363,14 +363,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
     public void testNotSendingHeartbeatIfMemberIsJoiningOrAcknowledgingWhenHeartbeatInFlight(final MemberState memberState) {
         final long timeToNextHeartbeatMs = 1234;
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> {
-                    when(mock.canSendRequest(time.milliseconds())).thenReturn(false);
-                    when(mock.timeToNextHeartbeatMs(time.milliseconds())).thenReturn(timeToNextHeartbeatMs);
-                    when(mock.requestInFlight()).thenReturn(true);
-                });
-            final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(Timer.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> {
+                        when(mock.canSendRequest(time.milliseconds())).thenReturn(false);
+                        when(mock.timeToNextHeartbeatMs(time.milliseconds())).thenReturn(timeToNextHeartbeatMs);
+                        when(mock.requestInFlight()).thenReturn(true);
+                    });
+                final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(Timer.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final Timer pollTimer = pollTimerMockedConstruction.constructed().get(0);
@@ -389,14 +389,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
     public void testSendingHeartbeatIfHeartbeatCanBeSent() {
         final long heartbeatIntervalMs = 1234;
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> {
-                    when(mock.canSendRequest(time.milliseconds())).thenReturn(true);
-                    when(mock.heartbeatIntervalMs()).thenReturn(heartbeatIntervalMs);
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> {
+                        when(mock.canSendRequest(time.milliseconds())).thenReturn(true);
+                        when(mock.heartbeatIntervalMs()).thenReturn(heartbeatIntervalMs);
 
-                });
-            final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(Timer.class)
+                    });
+                final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(Timer.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final Timer pollTimer = pollTimerMockedConstruction.constructed().get(0);
@@ -415,13 +415,13 @@ class StreamsGroupHeartbeatRequestManagerTest {
     public void testNotSendingHeartbeatIfHeartbeatCannotBeSent() {
         final long timeToNextHeartbeatMs = 1234;
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> {
-                    when(mock.canSendRequest(time.milliseconds())).thenReturn(false);
-                    when(mock.timeToNextHeartbeatMs(time.milliseconds())).thenReturn(timeToNextHeartbeatMs);
-                });
-            final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(Timer.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> {
+                        when(mock.canSendRequest(time.milliseconds())).thenReturn(false);
+                        when(mock.timeToNextHeartbeatMs(time.milliseconds())).thenReturn(timeToNextHeartbeatMs);
+                    });
+                final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(Timer.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final Timer pollTimer = pollTimerMockedConstruction.constructed().get(0);
@@ -439,14 +439,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
     public void testSendingLeaveHeartbeatIfPollTimerExpired() {
         final long heartbeatIntervalMs = 1234;
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.heartbeatIntervalMs()).thenReturn(heartbeatIntervalMs));
-            final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(
-                Timer.class,
-                (mock, context) -> when(mock.isExpired()).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.heartbeatIntervalMs()).thenReturn(heartbeatIntervalMs));
+                final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(
+                    Timer.class,
+                    (mock, context) -> when(mock.isExpired()).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final HeartbeatRequestState heartbeatRequestState = heartbeatRequestStateMockedConstruction.constructed().get(0);
@@ -469,14 +469,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
     public void testNotSendingLeaveHeartbeatIfPollTimerExpiredAndMemberIsLeaving() {
         final long timeToNextHeartbeatMs = 1234;
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.timeToNextHeartbeatMs(time.milliseconds())).thenReturn(timeToNextHeartbeatMs));
-            final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(
-                Timer.class,
-                (mock, context) -> when(mock.isExpired()).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.timeToNextHeartbeatMs(time.milliseconds())).thenReturn(timeToNextHeartbeatMs));
+                final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(
+                    Timer.class,
+                    (mock, context) -> when(mock.isExpired()).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final HeartbeatRequestState heartbeatRequestState = heartbeatRequestStateMockedConstruction.constructed().get(0);
@@ -500,12 +500,12 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testSendingLeaveHeartbeatRequestWhenPollTimerExpired() {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(
-                Timer.class,
-                (mock, context) -> when(mock.isExpired()).thenReturn(true))
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<Timer> pollTimerMockedConstruction = mockConstruction(
+                    Timer.class,
+                    (mock, context) -> when(mock.isExpired()).thenReturn(true))
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final HeartbeatRequestState heartbeatRequestState = heartbeatRequestStateMockedConstruction.constructed().get(0);
@@ -539,9 +539,9 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testSendingHeartbeatRequest() {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true))
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true))
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final HeartbeatRequestState heartbeatRequestState = heartbeatRequestStateMockedConstruction.constructed().get(0);
@@ -566,8 +566,8 @@ class StreamsGroupHeartbeatRequestManagerTest {
             verify(membershipManager).onHeartbeatRequestGenerated();
             time.sleep(2000);
             assertEquals(
-                2.0,
-                metrics.metric(metrics.metricName("last-heartbeat-seconds-ago", "consumer-coordinator-metrics")).metricValue()
+                    2.0,
+                    metrics.metric(metrics.metricName("last-heartbeat-seconds-ago", "consumer-coordinator-metrics")).metricValue()
             );
             final ClientResponse response = buildClientResponse();
             networkRequest.handler().onComplete(response);
@@ -577,14 +577,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
             verify(heartbeatRequestState).resetTimer();
             final List<TopicPartition> topicPartitions = streamsRebalanceData.partitionsByHost()
                 .get(new StreamsRebalanceData.HostInfo(
-                    ENDPOINT_TO_PARTITIONS.get(0).userEndpoint().host(),
-                    ENDPOINT_TO_PARTITIONS.get(0).userEndpoint().port())
+                        ENDPOINT_TO_PARTITIONS.get(0).userEndpoint().host(),
+                        ENDPOINT_TO_PARTITIONS.get(0).userEndpoint().port())
                 ).activePartitions();
             assertEquals(ENDPOINT_TO_PARTITIONS.get(0).activePartitions().get(0).topic(), topicPartitions.get(0).topic());
             assertEquals(ENDPOINT_TO_PARTITIONS.get(0).activePartitions().get(0).partitions().get(0), topicPartitions.get(0).partition());
             assertEquals(
-                1.0,
-                metrics.metric(metrics.metricName("heartbeat-total", "consumer-coordinator-metrics")).metricValue()
+                    1.0,
+                    metrics.metric(metrics.metricName("heartbeat-total", "consumer-coordinator-metrics")).metricValue()
             );
         }
     }
@@ -597,10 +597,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
         when(membershipManager.memberEpoch()).thenReturn(MEMBER_EPOCH);
         when(membershipManager.groupInstanceId()).thenReturn(instanceIdPresent ? Optional.of(INSTANCE_ID) : Optional.empty());
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1000
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1000
             );
 
         StreamsGroupHeartbeatRequestData requestData1 = heartbeatState.buildRequestData();
@@ -630,10 +630,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @MethodSource("provideNonJoiningStates")
     public void testBuildingHeartbeatRequestRackIdSentWhenJoining(final MemberState memberState) {
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1234
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1234
             );
         when(membershipManager.state()).thenReturn(MemberState.JOINING);
 
@@ -652,10 +652,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @MethodSource("provideNonJoiningStates")
     public void testBuildingHeartbeatRequestClientTagSentWhenJoining(final MemberState memberState) {
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1234
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1234
             );
         when(membershipManager.state()).thenReturn(MemberState.JOINING);
 
@@ -680,10 +680,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @MethodSource("provideNonJoiningStates")
     public void testBuildingHeartbeatRequestTopologySentWhenJoining(final MemberState memberState) {
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1000
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1000
             );
         when(membershipManager.state()).thenReturn(MemberState.JOINING);
 
@@ -715,11 +715,11 @@ class StreamsGroupHeartbeatRequestManagerTest {
         });
         assertEquals(2, subtopology1.copartitionGroups().size());
         final StreamsGroupHeartbeatRequestData.CopartitionGroup expectedCopartitionGroupData1 =
-            new StreamsGroupHeartbeatRequestData.CopartitionGroup()
+                new StreamsGroupHeartbeatRequestData.CopartitionGroup()
                 .setRepartitionSourceTopics(Collections.singletonList((short) 0))
                 .setSourceTopics(Collections.singletonList((short) 1));
         final StreamsGroupHeartbeatRequestData.CopartitionGroup expectedCopartitionGroupData2 =
-            new StreamsGroupHeartbeatRequestData.CopartitionGroup()
+                new StreamsGroupHeartbeatRequestData.CopartitionGroup()
                 .setRepartitionSourceTopics(Collections.singletonList((short) 1))
                 .setSourceTopics(Collections.singletonList((short) 0));
         assertTrue(subtopology1.copartitionGroups().contains(expectedCopartitionGroupData1));
@@ -755,10 +755,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
     public void testBuildingHeartbeatRequestRebalanceTimeoutSentWhenJoining(final MemberState memberState) {
         final int rebalanceTimeoutMs = 1234;
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                rebalanceTimeoutMs
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    rebalanceTimeoutMs
             );
         when(membershipManager.state()).thenReturn(MemberState.JOINING);
 
@@ -777,10 +777,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @MethodSource("provideNonJoiningStates")
     public void testBuildingHeartbeatProcessIdSentWhenJoining(final MemberState memberState) {
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1234
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1234
             );
         when(membershipManager.state()).thenReturn(MemberState.JOINING);
 
@@ -799,10 +799,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @MethodSource("provideNonJoiningStates")
     public void testBuildingHeartbeatEndpointSentWhenJoining(final MemberState memberState) {
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1234
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1234
             );
         when(membershipManager.state()).thenReturn(MemberState.JOINING);
 
@@ -822,10 +822,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @MethodSource("provideNonJoiningStates")
     public void testBuildingHeartbeatClientTagsSentWhenJoining(final MemberState memberState) {
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1234
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1234
             );
         when(membershipManager.state()).thenReturn(MemberState.JOINING);
 
@@ -845,10 +845,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @MethodSource("provideNonJoiningStates")
     public void testBuildingHeartbeatAssignmentSentWhenChanged(final MemberState memberState) {
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1234
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1234
             );
         when(membershipManager.state()).thenReturn(MemberState.JOINING);
 
@@ -860,52 +860,52 @@ class StreamsGroupHeartbeatRequestManagerTest {
 
         when(membershipManager.state()).thenReturn(memberState);
         streamsRebalanceData.setReconciledAssignment(
-            new StreamsRebalanceData.Assignment(
-                Set.of(
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 0),
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 1),
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_2, 2)
+                new StreamsRebalanceData.Assignment(
+                    Set.of(
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 0),
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 1),
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_2, 2)
                 ),
-                Set.of(
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 2)
+                    Set.of(
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 2)
                 ),
-                Set.of(
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 3),
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 4),
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 5)
+                    Set.of(
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 3),
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 4),
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 5)
                 ),
-                true
+                    true
             )
         );
 
         StreamsGroupHeartbeatRequestData firstNonJoiningRequestData = heartbeatState.buildRequestData();
 
         assertTaskIdsEquals(
-            List.of(
-                new StreamsGroupHeartbeatRequestData.TaskIds()
+                List.of(
+                    new StreamsGroupHeartbeatRequestData.TaskIds()
                     .setSubtopologyId(SUBTOPOLOGY_NAME_1)
                     .setPartitions(List.of(0, 1)),
-                new StreamsGroupHeartbeatRequestData.TaskIds()
+                    new StreamsGroupHeartbeatRequestData.TaskIds()
                     .setSubtopologyId(SUBTOPOLOGY_NAME_2)
                     .setPartitions(List.of(2))
             ),
-            firstNonJoiningRequestData.activeTasks()
+                firstNonJoiningRequestData.activeTasks()
         );
         assertTaskIdsEquals(
-            List.of(
-                new StreamsGroupHeartbeatRequestData.TaskIds()
+                List.of(
+                    new StreamsGroupHeartbeatRequestData.TaskIds()
                     .setSubtopologyId(SUBTOPOLOGY_NAME_1)
                     .setPartitions(List.of(2))
             ),
-            firstNonJoiningRequestData.standbyTasks()
+                firstNonJoiningRequestData.standbyTasks()
         );
         assertTaskIdsEquals(
-            List.of(
-                new StreamsGroupHeartbeatRequestData.TaskIds()
+                List.of(
+                    new StreamsGroupHeartbeatRequestData.TaskIds()
                     .setSubtopologyId(SUBTOPOLOGY_NAME_1)
                     .setPartitions(List.of(3, 4, 5))
             ),
-            firstNonJoiningRequestData.warmupTasks()
+                firstNonJoiningRequestData.warmupTasks()
         );
 
         StreamsGroupHeartbeatRequestData nonJoiningRequestDataWithoutChanges = heartbeatState.buildRequestData();
@@ -915,36 +915,36 @@ class StreamsGroupHeartbeatRequestManagerTest {
         assertNull(nonJoiningRequestDataWithoutChanges.warmupTasks());
 
         streamsRebalanceData.setReconciledAssignment(
-            new StreamsRebalanceData.Assignment(
-                Set.of(
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 0)
+                new StreamsRebalanceData.Assignment(
+                    Set.of(
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 0)
                 ),
-                Set.of(
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 2)
+                    Set.of(
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 2)
                 ),
-                Set.of(
+                    Set.of(
                 ),
-                true
+                    true
             )
         );
 
         StreamsGroupHeartbeatRequestData nonJoiningRequestDataWithChanges = heartbeatState.buildRequestData();
 
         assertTaskIdsEquals(
-            List.of(
-                new StreamsGroupHeartbeatRequestData.TaskIds()
+                List.of(
+                    new StreamsGroupHeartbeatRequestData.TaskIds()
                     .setSubtopologyId(SUBTOPOLOGY_NAME_1)
                     .setPartitions(List.of(0))
             ),
-            nonJoiningRequestDataWithChanges.activeTasks()
+                nonJoiningRequestDataWithChanges.activeTasks()
         );
         assertTaskIdsEquals(
-            List.of(
-                new StreamsGroupHeartbeatRequestData.TaskIds()
+                List.of(
+                    new StreamsGroupHeartbeatRequestData.TaskIds()
                     .setSubtopologyId(SUBTOPOLOGY_NAME_1)
                     .setPartitions(List.of(2))
             ),
-            nonJoiningRequestDataWithChanges.standbyTasks()
+                nonJoiningRequestDataWithChanges.standbyTasks()
         );
         assertEquals(List.of(), nonJoiningRequestDataWithChanges.warmupTasks());
     }
@@ -957,28 +957,28 @@ class StreamsGroupHeartbeatRequestManagerTest {
         when(membershipManager.memberEpoch()).thenReturn(MEMBER_EPOCH);
         when(membershipManager.groupInstanceId()).thenReturn(Optional.of(INSTANCE_ID));
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1234
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1234
             );
         when(membershipManager.state()).thenReturn(memberState);
         streamsRebalanceData.setReconciledAssignment(
-            new StreamsRebalanceData.Assignment(
-                Set.of(
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 0),
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 1),
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_2, 2)
+                new StreamsRebalanceData.Assignment(
+                    Set.of(
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 0),
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 1),
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_2, 2)
                 ),
-                Set.of(
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 2)
+                    Set.of(
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 2)
                 ),
-                Set.of(
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 3),
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 4),
-                    new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 5)
+                    Set.of(
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 3),
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 4),
+                        new StreamsRebalanceData.TaskId(SUBTOPOLOGY_NAME_1, 5)
                 ),
-                true
+                    true
             )
         );
         StreamsGroupHeartbeatRequestData requestDataBeforeReset = heartbeatState.buildRequestData();
@@ -1004,25 +1004,25 @@ class StreamsGroupHeartbeatRequestManagerTest {
 
     private static Stream<Arguments> provideNonJoiningStates() {
         return Stream.of(
-            Arguments.of(MemberState.ACKNOWLEDGING),
-            Arguments.of(MemberState.RECONCILING),
-            Arguments.of(MemberState.STABLE),
-            Arguments.of(MemberState.PREPARE_LEAVING),
-            Arguments.of(MemberState.LEAVING)
+                Arguments.of(MemberState.ACKNOWLEDGING),
+                Arguments.of(MemberState.RECONCILING),
+                Arguments.of(MemberState.STABLE),
+                Arguments.of(MemberState.PREPARE_LEAVING),
+                Arguments.of(MemberState.LEAVING)
         );
     }
 
     @ParameterizedTest
     @EnumSource(
-        value = MemberState.class,
-        names = {"JOINING", "ACKNOWLEDGING", "RECONCILING", "STABLE", "PREPARE_LEAVING", "LEAVING"}
+            value = MemberState.class,
+            names = {"JOINING", "ACKNOWLEDGING", "RECONCILING", "STABLE", "PREPARE_LEAVING", "LEAVING"}
     )
     public void testBuildingHeartbeatShutdownRequested(final MemberState memberState) {
         final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState =
-            new StreamsGroupHeartbeatRequestManager.HeartbeatState(
-                streamsRebalanceData,
-                membershipManager,
-                1234
+                new StreamsGroupHeartbeatRequestManager.HeartbeatState(
+                    streamsRebalanceData,
+                    membershipManager,
+                    1234
             );
         when(membershipManager.state()).thenReturn(memberState);
 
@@ -1040,11 +1040,11 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testCoordinatorDisconnectFailureWhileSending() {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1069,11 +1069,11 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testUnsupportedVersionFailureWhileSending() {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1094,11 +1094,11 @@ class StreamsGroupHeartbeatRequestManagerTest {
             ArgumentCaptor<ErrorEvent> errorEvent = ArgumentCaptor.forClass(ErrorEvent.class);
             verify(backgroundEventHandler).add(errorEvent.capture());
             assertEquals(
-                "The cluster does not support the STREAMS group " +
+                    "The cluster does not support the STREAMS group " +
                     "protocol or does not support the versions of the STREAMS group protocol used by this client " +
                     "(used versions: " + StreamsGroupHeartbeatRequestData.LOWEST_SUPPORTED_VERSION + " to " +
                     StreamsGroupHeartbeatRequestData.HIGHEST_SUPPORTED_VERSION + ").",
-                errorEvent.getValue().error().getMessage()
+                    errorEvent.getValue().error().getMessage()
             );
             assertInstanceOf(UnsupportedVersionException.class, errorEvent.getValue().error());
             verify(membershipManager).transitionToFatal();
@@ -1108,11 +1108,11 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testFatalFailureWhileSending() {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1139,16 +1139,16 @@ class StreamsGroupHeartbeatRequestManagerTest {
 
     @ParameterizedTest
     @EnumSource(
-        value = Errors.class,
-        names = {"NOT_COORDINATOR", "COORDINATOR_NOT_AVAILABLE"}
+            value = Errors.class,
+            names = {"NOT_COORDINATOR", "COORDINATOR_NOT_AVAILABLE"}
     )
     public void testNotCoordinatorAndCoordinatorNotAvailableErrorResponse(final Errors error) {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1164,8 +1164,8 @@ class StreamsGroupHeartbeatRequestManagerTest {
             final ClientResponse response = buildClientErrorResponse(error, "error message");
             networkRequest.handler().onComplete(response);
             verify(coordinatorRequestManager).markCoordinatorUnknown(
-                ((StreamsGroupHeartbeatResponse) response.responseBody()).data().errorMessage(),
-                completionTimeMs
+                    ((StreamsGroupHeartbeatResponse) response.responseBody()).data().errorMessage(),
+                    completionTimeMs
             );
             verify(heartbeatState).reset();
             verify(heartbeatRequestState).reset();
@@ -1176,11 +1176,11 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testCoordinatorLoadInProgressErrorResponse() {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1202,12 +1202,12 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testGroupAuthorizationFailedErrorResponse() {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class);
-            final LogCaptureAppender logAppender = LogCaptureAppender.createAndRegister(StreamsGroupHeartbeatRequestManager.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class);
+                final LogCaptureAppender logAppender = LogCaptureAppender.createAndRegister(StreamsGroupHeartbeatRequestManager.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1222,13 +1222,13 @@ class StreamsGroupHeartbeatRequestManagerTest {
             networkRequest.handler().onComplete(response);
             assertTrue(logAppender.getMessages("ERROR").stream()
                 .anyMatch(m -> m.contains("StreamsGroupHeartbeatRequest failed due to group authorization failure: " +
-                    "Not authorized to access group: " + GROUP_ID)));
+                        "Not authorized to access group: " + GROUP_ID)));
             verify(heartbeatState).reset();
             ArgumentCaptor<ErrorEvent> errorEvent = ArgumentCaptor.forClass(ErrorEvent.class);
             verify(backgroundEventHandler).add(errorEvent.capture());
             assertEquals(
-                GroupAuthorizationException.forGroupId(GROUP_ID).getMessage(),
-                errorEvent.getValue().error().getMessage()
+                    GroupAuthorizationException.forGroupId(GROUP_ID).getMessage(),
+                    errorEvent.getValue().error().getMessage()
             );
             assertInstanceOf(GroupAuthorizationException.class, errorEvent.getValue().error());
             verify(membershipManager).transitionToFatal();
@@ -1239,12 +1239,12 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testTopicAuthorizationFailedErrorResponse() {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class);
-            final LogCaptureAppender logAppender = LogCaptureAppender.createAndRegister(StreamsGroupHeartbeatRequestManager.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class);
+                final LogCaptureAppender logAppender = LogCaptureAppender.createAndRegister(StreamsGroupHeartbeatRequestManager.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1261,8 +1261,8 @@ class StreamsGroupHeartbeatRequestManagerTest {
             networkRequest.handler().onComplete(response);
             assertTrue(logAppender.getMessages("ERROR").stream()
                 .anyMatch(m -> m.contains("StreamsGroupHeartbeatRequest failed for member " + MEMBER_ID +
-                    " with state " + MemberState.STABLE + " due to " + Errors.TOPIC_AUTHORIZATION_FAILED + ": " +
-                    errorMessage)));
+                        " with state " + MemberState.STABLE + " due to " + Errors.TOPIC_AUTHORIZATION_FAILED + ": " +
+                        errorMessage)));
             verify(heartbeatState).reset();
             ArgumentCaptor<ErrorEvent> errorEvent = ArgumentCaptor.forClass(ErrorEvent.class);
             verify(backgroundEventHandler).add(errorEvent.capture());
@@ -1274,24 +1274,24 @@ class StreamsGroupHeartbeatRequestManagerTest {
 
     @ParameterizedTest
     @EnumSource(
-        value = Errors.class,
-        names = {
-            "INVALID_REQUEST",
-            "GROUP_MAX_SIZE_REACHED",
-            "UNSUPPORTED_VERSION",
-            "STREAMS_INVALID_TOPOLOGY",
-            "STREAMS_INVALID_TOPOLOGY_EPOCH",
-            "STREAMS_TOPOLOGY_FENCED"
-        }
+            value = Errors.class,
+            names = {
+                "INVALID_REQUEST",
+                "GROUP_MAX_SIZE_REACHED",
+                "UNSUPPORTED_VERSION",
+                "STREAMS_INVALID_TOPOLOGY",
+                "STREAMS_INVALID_TOPOLOGY_EPOCH",
+                "STREAMS_TOPOLOGY_FENCED"
+            }
     )
     public void testKnownFatalErrorResponse(final Errors error) {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class);
-            final LogCaptureAppender logAppender = LogCaptureAppender.createAndRegister(StreamsGroupHeartbeatRequestManager.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class);
+                final LogCaptureAppender logAppender = LogCaptureAppender.createAndRegister(StreamsGroupHeartbeatRequestManager.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1309,17 +1309,17 @@ class StreamsGroupHeartbeatRequestManagerTest {
             verify(backgroundEventHandler).add(errorEvent.capture());
             if (error == Errors.UNSUPPORTED_VERSION) {
                 final String errorMessage = "The cluster does not support the STREAMS group " +
-                    "protocol or does not support the versions of the STREAMS group protocol used by this client " +
-                    "(used versions: " + StreamsGroupHeartbeatRequestData.LOWEST_SUPPORTED_VERSION + " to " +
-                    StreamsGroupHeartbeatRequestData.HIGHEST_SUPPORTED_VERSION + ").";
+                        "protocol or does not support the versions of the STREAMS group protocol used by this client " +
+                        "(used versions: " + StreamsGroupHeartbeatRequestData.LOWEST_SUPPORTED_VERSION + " to " +
+                        StreamsGroupHeartbeatRequestData.HIGHEST_SUPPORTED_VERSION + ").";
                 assertTrue(logAppender.getMessages("ERROR").stream()
                     .anyMatch(m -> m.contains("StreamsGroupHeartbeatRequest failed due to " +
-                        error + ": " + errorMessage)));
+                            error + ": " + errorMessage)));
                 assertEquals(errorMessage, errorEvent.getValue().error().getMessage());
             } else {
                 assertTrue(logAppender.getMessages("ERROR").stream()
                     .anyMatch(m -> m.contains("StreamsGroupHeartbeatRequest failed due to " +
-                        error + ": " + errorMessageInResponse)));
+                            error + ": " + errorMessageInResponse)));
                 assertEquals(errorMessageInResponse, errorEvent.getValue().error().getMessage());
             }
             assertInstanceOf(error.exception().getClass(), errorEvent.getValue().error());
@@ -1330,16 +1330,16 @@ class StreamsGroupHeartbeatRequestManagerTest {
 
     @ParameterizedTest
     @EnumSource(
-        value = Errors.class,
-        names = {"FENCED_MEMBER_EPOCH", "UNKNOWN_MEMBER_ID"}
+            value = Errors.class,
+            names = {"FENCED_MEMBER_EPOCH", "UNKNOWN_MEMBER_ID"}
     )
     public void testFencedMemberOrUnknownMemberIdErrorResponse(final Errors error) {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1364,12 +1364,12 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @MethodSource("provideOtherErrors")
     public void testOtherErrorResponse(final Errors error) {
         try (
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
-            final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
-                StreamsGroupHeartbeatRequestManager.HeartbeatState.class);
-            final LogCaptureAppender logAppender = LogCaptureAppender.createAndRegister(StreamsGroupHeartbeatRequestManager.class)
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.canSendRequest(time.milliseconds())).thenReturn(true));
+                final MockedConstruction<StreamsGroupHeartbeatRequestManager.HeartbeatState> heartbeatStateMockedConstruction = mockConstruction(
+                    StreamsGroupHeartbeatRequestManager.HeartbeatState.class);
+                final LogCaptureAppender logAppender = LogCaptureAppender.createAndRegister(StreamsGroupHeartbeatRequestManager.class)
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final StreamsGroupHeartbeatRequestManager.HeartbeatState heartbeatState = heartbeatStateMockedConstruction.constructed().get(0);
@@ -1396,20 +1396,20 @@ class StreamsGroupHeartbeatRequestManagerTest {
 
     private static Stream<Arguments> provideOtherErrors() {
         final Set<Errors> consideredErrors = Set.of(
-            Errors.NONE,
-            Errors.NOT_COORDINATOR,
-            Errors.COORDINATOR_NOT_AVAILABLE,
-            Errors.COORDINATOR_LOAD_IN_PROGRESS,
-            Errors.GROUP_AUTHORIZATION_FAILED,
-            Errors.TOPIC_AUTHORIZATION_FAILED,
-            Errors.INVALID_REQUEST,
-            Errors.GROUP_MAX_SIZE_REACHED,
-            Errors.FENCED_MEMBER_EPOCH,
-            Errors.UNKNOWN_MEMBER_ID,
-            Errors.UNSUPPORTED_VERSION,
-            Errors.STREAMS_INVALID_TOPOLOGY,
-            Errors.STREAMS_INVALID_TOPOLOGY_EPOCH,
-            Errors.STREAMS_TOPOLOGY_FENCED);
+                Errors.NONE,
+                Errors.NOT_COORDINATOR,
+                Errors.COORDINATOR_NOT_AVAILABLE,
+                Errors.COORDINATOR_LOAD_IN_PROGRESS,
+                Errors.GROUP_AUTHORIZATION_FAILED,
+                Errors.TOPIC_AUTHORIZATION_FAILED,
+                Errors.INVALID_REQUEST,
+                Errors.GROUP_MAX_SIZE_REACHED,
+                Errors.FENCED_MEMBER_EPOCH,
+                Errors.UNKNOWN_MEMBER_ID,
+                Errors.UNSUPPORTED_VERSION,
+                Errors.STREAMS_INVALID_TOPOLOGY,
+                Errors.STREAMS_INVALID_TOPOLOGY_EPOCH,
+                Errors.STREAMS_TOPOLOGY_FENCED);
         return Arrays.stream(Errors.values())
             .filter(error -> !consideredErrors.contains(error))
             .map(Arguments::of);
@@ -1445,11 +1445,11 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testMaximumTimeToWaitPollTimerExpired() {
         try (
-            final MockedConstruction<Timer> timerMockedConstruction =
-                mockConstruction(Timer.class, (mock, context) -> when(mock.isExpired()).thenReturn(true));
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.requestInFlight()).thenReturn(false))
+                final MockedConstruction<Timer> timerMockedConstruction =
+                        mockConstruction(Timer.class, (mock, context) -> when(mock.isExpired()).thenReturn(true));
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.requestInFlight()).thenReturn(false))
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final Timer pollTimer = timerMockedConstruction.constructed().get(0);
@@ -1465,10 +1465,10 @@ class StreamsGroupHeartbeatRequestManagerTest {
     @Test
     public void testMaximumTimeToWaitWhenHeartbeatShouldBeSentImmediately() {
         try (
-            final MockedConstruction<Timer> timerMockedConstruction = mockConstruction(Timer.class);
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.requestInFlight()).thenReturn(false))
+                final MockedConstruction<Timer> timerMockedConstruction = mockConstruction(Timer.class);
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.requestInFlight()).thenReturn(false))
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final Timer pollTimer = timerMockedConstruction.constructed().get(0);
@@ -1489,14 +1489,14 @@ class StreamsGroupHeartbeatRequestManagerTest {
         final long remainingMs = 12L;
         final long timeToNextHeartbeatMs = 6L;
         try (
-            final MockedConstruction<Timer> timerMockedConstruction =
-                mockConstruction(Timer.class, (mock, context) -> when(mock.remainingMs()).thenReturn(remainingMs));
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> {
-                    when(mock.requestInFlight()).thenReturn(isRequestInFlight);
-                    when(mock.timeToNextHeartbeatMs(anyLong())).thenReturn(timeToNextHeartbeatMs);
-                })
+                final MockedConstruction<Timer> timerMockedConstruction =
+                        mockConstruction(Timer.class, (mock, context) -> when(mock.remainingMs()).thenReturn(remainingMs));
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> {
+                        when(mock.requestInFlight()).thenReturn(isRequestInFlight);
+                        when(mock.timeToNextHeartbeatMs(anyLong())).thenReturn(timeToNextHeartbeatMs);
+                    })
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final Timer pollTimer = timerMockedConstruction.constructed().get(0);
@@ -1515,11 +1515,11 @@ class StreamsGroupHeartbeatRequestManagerTest {
     public void testMaximumTimeToWaitSelectingMinimumWaitTime(final long remainingMs,
                                                               final long timeToNextHeartbeatMs) {
         try (
-            final MockedConstruction<Timer> timerMockedConstruction =
-                mockConstruction(Timer.class, (mock, context) -> when(mock.remainingMs()).thenReturn(remainingMs));
-            final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
-                HeartbeatRequestState.class,
-                (mock, context) -> when(mock.timeToNextHeartbeatMs(anyLong())).thenReturn(timeToNextHeartbeatMs))
+                final MockedConstruction<Timer> timerMockedConstruction =
+                        mockConstruction(Timer.class, (mock, context) -> when(mock.remainingMs()).thenReturn(remainingMs));
+                final MockedConstruction<HeartbeatRequestState> heartbeatRequestStateMockedConstruction = mockConstruction(
+                    HeartbeatRequestState.class,
+                    (mock, context) -> when(mock.timeToNextHeartbeatMs(anyLong())).thenReturn(timeToNextHeartbeatMs))
         ) {
             final StreamsGroupHeartbeatRequestManager heartbeatRequestManager = createStreamsGroupHeartbeatRequestManager();
             final Timer pollTimer = timerMockedConstruction.constructed().get(0);
@@ -1602,29 +1602,29 @@ class StreamsGroupHeartbeatRequestManagerTest {
 
     private StreamsGroupHeartbeatRequestManager createStreamsGroupHeartbeatRequestManager() {
         return new StreamsGroupHeartbeatRequestManager(
-            LOG_CONTEXT,
-            time,
-            config,
-            coordinatorRequestManager,
-            membershipManager,
-            backgroundEventHandler,
-            metrics,
-            streamsRebalanceData
+                LOG_CONTEXT,
+                time,
+                config,
+                coordinatorRequestManager,
+                membershipManager,
+                backgroundEventHandler,
+                metrics,
+                streamsRebalanceData
         );
     }
 
     private ClientResponse buildClientResponse() {
         return new ClientResponse(
-            new RequestHeader(ApiKeys.STREAMS_GROUP_HEARTBEAT, (short) 1, "", 1),
-            null,
-            "-1",
-            time.milliseconds(),
-            time.milliseconds(),
-            false,
-            null,
-            null,
-            new StreamsGroupHeartbeatResponse(
-                new StreamsGroupHeartbeatResponseData()
+                new RequestHeader(ApiKeys.STREAMS_GROUP_HEARTBEAT, (short) 1, "", 1),
+                null,
+                "-1",
+                time.milliseconds(),
+                time.milliseconds(),
+                false,
+                null,
+                null,
+                new StreamsGroupHeartbeatResponse(
+                    new StreamsGroupHeartbeatResponseData()
                     .setPartitionsByUserEndpoint(ENDPOINT_TO_PARTITIONS)
                     .setHeartbeatIntervalMs((int) RECEIVED_HEARTBEAT_INTERVAL_MS)
             )
@@ -1633,16 +1633,16 @@ class StreamsGroupHeartbeatRequestManagerTest {
 
     private ClientResponse buildClientErrorResponse(final Errors error, final String errorMessage) {
         return new ClientResponse(
-            new RequestHeader(ApiKeys.STREAMS_GROUP_HEARTBEAT, (short) 1, "", 1),
-            null,
-            "-1",
-            time.milliseconds(),
-            time.milliseconds(),
-            false,
-            null,
-            null,
-            new StreamsGroupHeartbeatResponse(
-                new StreamsGroupHeartbeatResponseData()
+                new RequestHeader(ApiKeys.STREAMS_GROUP_HEARTBEAT, (short) 1, "", 1),
+                null,
+                "-1",
+                time.milliseconds(),
+                time.milliseconds(),
+                false,
+                null,
+                null,
+                new StreamsGroupHeartbeatResponse(
+                    new StreamsGroupHeartbeatResponseData()
                     .setErrorCode(error.code())
                     .setErrorMessage(errorMessage)
             )
