@@ -15,6 +15,7 @@
  * limitations under the License.
  */
 package org.apache.kafka.streams.processor.internals;
+
 import org.apache.kafka.clients.admin.AdminClient;
 import org.apache.kafka.clients.admin.Config;
 import org.apache.kafka.clients.admin.ConfigEntry;
@@ -110,12 +111,12 @@ public class InternalTopicManagerTest {
     private final MockTime time = new MockTime(0);
 
     private final Map<String, Object> config = Map.of(
-        StreamsConfig.APPLICATION_ID_CONFIG, "app-id",
-        StreamsConfig.BOOTSTRAP_SERVERS_CONFIG, broker1.host() + ":" + broker1.port(),
-        StreamsConfig.REPLICATION_FACTOR_CONFIG, 1,
-        StreamsConfig.producerPrefix(ProducerConfig.BATCH_SIZE_CONFIG), 16384,
-        StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG), 100,
-        StreamsConfig.RETRY_BACKOFF_MS_CONFIG, 10
+            StreamsConfig.APPLICATION_ID_CONFIG, "app-id",
+            StreamsConfig.BOOTSTRAP_SERVERS_CONFIG, broker1.host() + ":" + broker1.port(),
+            StreamsConfig.REPLICATION_FACTOR_CONFIG, 1,
+            StreamsConfig.producerPrefix(ProducerConfig.BATCH_SIZE_CONFIG), 16384,
+            StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG), 100,
+            StreamsConfig.RETRY_BACKOFF_MS_CONFIG, 10
     );
 
     @BeforeEach
@@ -124,9 +125,9 @@ public class InternalTopicManagerTest {
 
         mockAdminClient = new MockAdminClient(cluster, broker1);
         internalTopicManager = new InternalTopicManager(
-            time,
-            mockAdminClient,
-            new StreamsConfig(config)
+                time,
+                mockAdminClient,
+                new StreamsConfig(config)
         );
     }
 
@@ -141,8 +142,8 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig2 = setupRepartitionTopicConfig(topic2, 1);
 
         internalTopicManager.setup(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(topic2, internalTopicConfig2)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(topic2, internalTopicConfig2)
         ));
 
         final Set<String> newlyCreatedTopics = mockAdminClient.listTopics().names().get();
@@ -169,7 +170,7 @@ public class InternalTopicManagerTest {
         createTopicFailFuture.completeExceptionally(new TopicExistsException("exists"));
         final KafkaFutureImpl<TopicMetadataAndConfig> createTopicSuccessfulFuture = new KafkaFutureImpl<>();
         createTopicSuccessfulFuture.complete(
-            new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
+                new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
         );
         final InternalTopicConfig internalTopicConfig1 = setupRepartitionTopicConfig(topic1, 1);
         final InternalTopicConfig internalTopicConfig2 = setupRepartitionTopicConfig(topic2, 1);
@@ -177,17 +178,17 @@ public class InternalTopicManagerTest {
         final NewTopic newTopic2 = newTopic(topic2, internalTopicConfig2, streamsConfig);
         when(admin.createTopics(Set.of(newTopic1, newTopic2)))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
-                mkEntry(topic1, createTopicSuccessfulFuture),
-                mkEntry(topic2, createTopicFailFuture)
+                    mkEntry(topic1, createTopicSuccessfulFuture),
+                    mkEntry(topic2, createTopicFailFuture)
             )));
         when(admin.createTopics(Set.of(newTopic2)))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
-                mkEntry(topic2, createTopicSuccessfulFuture)
+                    mkEntry(topic2, createTopicSuccessfulFuture)
             )));
 
         topicManager.setup(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(topic2, internalTopicConfig2)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(topic2, internalTopicConfig2)
         ));
     }
 
@@ -209,20 +210,20 @@ public class InternalTopicManagerTest {
         createTopicFailFuture.completeExceptionally(retriableException);
         final KafkaFutureImpl<TopicMetadataAndConfig> createTopicSuccessfulFuture = new KafkaFutureImpl<>();
         createTopicSuccessfulFuture.complete(
-            new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
+                new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
         );
         final InternalTopicConfig internalTopicConfig = setupRepartitionTopicConfig(topic1, 1);
         final NewTopic newTopic = newTopic(topic1, internalTopicConfig, streamsConfig);
         when(admin.createTopics(Set.of(newTopic)))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
-                mkEntry(topic1, createTopicSuccessfulFuture)
+                    mkEntry(topic1, createTopicSuccessfulFuture)
             )))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
                     mkEntry(topic2, createTopicSuccessfulFuture)
             )));
 
         topicManager.setup(mkMap(
-            mkEntry(topic1, internalTopicConfig)
+                mkEntry(topic1, internalTopicConfig)
         ));
     }
 
@@ -243,7 +244,7 @@ public class InternalTopicManagerTest {
 
                 try {
                     new CreateTopicsRequest.Builder(
-                        new CreateTopicsRequestData()
+                            new CreateTopicsRequestData()
                             .setTopics(topicsToBeCreated)
                             .setTimeoutMs(0)
                             .setValidateOnly(options.shouldValidateOnly()))
@@ -266,13 +267,13 @@ public class InternalTopicManagerTest {
         topicConfig.setNumberOfPartitions(1);
 
         final StreamsException exception = assertThrows(
-            StreamsException.class,
-            () -> topicManager.makeReady(Collections.singletonMap(topic1, topicConfig))
+                StreamsException.class,
+                () -> topicManager.makeReady(Collections.singletonMap(topic1, topicConfig))
         );
         assertThat(
-            exception.getMessage(),
-            equalTo("Could not create topic " + topic1 + ", because brokers don't support configuration replication.factor=-1."
-                + " You can change the replication.factor config or upgrade your brokers to version 2.4 or newer to avoid this error."));
+                exception.getMessage(),
+                equalTo("Could not create topic " + topic1 + ", because brokers don't support configuration replication.factor=-1."
+                    + " You can change the replication.factor config or upgrade your brokers to version 2.4 or newer to avoid this error."));
     }
 
     @Test
@@ -282,16 +283,16 @@ public class InternalTopicManagerTest {
         mockAdminClient.timeoutNextRequest(Integer.MAX_VALUE);
 
         final InternalTopicManager internalTopicManager =
-            new InternalTopicManager(time, mockAdminClient, new StreamsConfig(config));
+                new InternalTopicManager(time, mockAdminClient, new StreamsConfig(config));
 
         final TimeoutException exception = assertThrows(
-            TimeoutException.class,
-            () -> internalTopicManager.getTopicPartitionInfo(Collections.singleton(topic1))
+                TimeoutException.class,
+                () -> internalTopicManager.getTopicPartitionInfo(Collections.singleton(topic1))
         );
 
         assertThat(
-            exception.getMessage(),
-            is("Could not create topics within 50 milliseconds. This can happen if the Kafka cluster is temporarily not available.")
+                exception.getMessage(),
+                is("Could not create topics within 50 milliseconds. This can happen if the Kafka cluster is temporarily not available.")
         );
     }
 
@@ -299,22 +300,22 @@ public class InternalTopicManagerTest {
     public void shouldThrowSetupTimeoutExceptionIfTopicExistsDuringSetup() {
         setupTopicInMockAdminClient(topic1, Collections.emptyMap());
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 15
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 15
         );
         final InternalTopicManager internalTopicManager =
-            new InternalTopicManager(time, mockAdminClient, new StreamsConfig(config));
+                new InternalTopicManager(time, mockAdminClient, new StreamsConfig(config));
         final InternalTopicConfig internalTopicConfig = setupRepartitionTopicConfig(topic1, 1);
 
         final TimeoutException exception = assertThrows(
-            TimeoutException.class,
-            () -> internalTopicManager.setup(Collections.singletonMap(topic1, internalTopicConfig))
+                TimeoutException.class,
+                () -> internalTopicManager.setup(Collections.singletonMap(topic1, internalTopicConfig))
         );
 
         assertThat(
-            exception.getMessage(),
-            is("Setup timeout: Could not create internal topics within " +
+                exception.getMessage(),
+                is("Setup timeout: Could not create internal topics within " +
                     (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 2 +
-                " milliseconds. This can happen if the Kafka cluster is temporarily not available or a topic is marked" +
+                    " milliseconds. This can happen if the Kafka cluster is temporarily not available or a topic is marked" +
                     " for deletion and the broker did not complete its deletion within the timeout." +
                     " The last errors seen per topic are:" +
                     " {" + topic1 + "=org.apache.kafka.common.errors.TopicExistsException: Topic test_topic exists already.}")
@@ -386,11 +387,11 @@ public class InternalTopicManagerTest {
         final NewTopic newTopic = newTopic(topic1, internalTopicConfig, streamsConfig);
         when(admin.createTopics(Set.of(newTopic)))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
-                mkEntry(topic1, createTopicFailFuture)
+                    mkEntry(topic1, createTopicFailFuture)
             )));
 
         assertThrows(StreamsException.class, () -> topicManager.setup(mkMap(
-            mkEntry(topic1, internalTopicConfig)
+                mkEntry(topic1, internalTopicConfig)
         )));
     }
 
@@ -405,8 +406,8 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockCreateTopicsResult(Collections.singletonMap(topic2, new KafkaFutureImpl<>())));
 
         assertThrows(
-            IllegalStateException.class,
-            () -> topicManager.setup(Collections.singletonMap(topic1, internalTopicConfig))
+                IllegalStateException.class,
+                () -> topicManager.setup(Collections.singletonMap(topic1, internalTopicConfig))
         );
     }
 
@@ -414,7 +415,7 @@ public class InternalTopicManagerTest {
     public void shouldThrowTimeoutExceptionWhenCreateTopicExceedsTimeout() {
         final AdminClient admin = mock(AdminClient.class);
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
         );
         final StreamsConfig streamsConfig = new StreamsConfig(config);
         final InternalTopicManager topicManager = new InternalTopicManager(time, admin, streamsConfig);
@@ -426,8 +427,8 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(mkEntry(topic1, createTopicFailFuture))));
 
         assertThrows(
-            TimeoutException.class,
-            () -> topicManager.setup(Collections.singletonMap(topic1, internalTopicConfig))
+                TimeoutException.class,
+                () -> topicManager.setup(Collections.singletonMap(topic1, internalTopicConfig))
         );
     }
 
@@ -435,7 +436,7 @@ public class InternalTopicManagerTest {
     public void shouldThrowTimeoutExceptionWhenFuturesNeverCompleteDuringSetup() {
         final AdminClient admin = mock(AdminClient.class);
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
         );
         final StreamsConfig streamsConfig = new StreamsConfig(config);
         final InternalTopicManager topicManager = new InternalTopicManager(time, admin, streamsConfig);
@@ -446,8 +447,8 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(mkEntry(topic1, createTopicFutureThatNeverCompletes))));
 
         assertThrows(
-            TimeoutException.class,
-            () -> topicManager.setup(Collections.singletonMap(topic1, internalTopicConfig))
+                TimeoutException.class,
+                () -> topicManager.setup(Collections.singletonMap(topic1, internalTopicConfig))
         );
     }
 
@@ -456,7 +457,7 @@ public class InternalTopicManagerTest {
         final AdminClient admin = mock(AdminClient.class);
         final StreamsConfig streamsConfig = new StreamsConfig(config);
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
         );
         final InternalTopicManager topicManager = new InternalTopicManager(time, admin, streamsConfig);
         final InternalTopicConfig internalTopicConfig1 = setupRepartitionTopicConfig(topic1, 1);
@@ -468,10 +469,10 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockDeleteTopicsResult(mkMap(mkEntry(topic1, deleteTopicSuccessfulFuture))));
 
         assertThrows(
-            StreamsException.class,
-            () -> topicManager.setup(mkMap(
-                mkEntry(topic1, internalTopicConfig1),
-                mkEntry(topic2, internalTopicConfig2)
+                StreamsException.class,
+                () -> topicManager.setup(mkMap(
+                    mkEntry(topic1, internalTopicConfig1),
+                    mkEntry(topic2, internalTopicConfig2)
             ))
         );
     }
@@ -487,18 +488,18 @@ public class InternalTopicManagerTest {
         createTopicFailFuture1.completeExceptionally(new TopicExistsException("exists"));
         final KafkaFutureImpl<TopicMetadataAndConfig> createTopicSuccessfulFuture = new KafkaFutureImpl<>();
         createTopicSuccessfulFuture.complete(
-            new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
+                new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
         );
         final NewTopic newTopic1 = newTopic(topic1, internalTopicConfig1, streamsConfig);
         final NewTopic newTopic2 = newTopic(topic2, internalTopicConfig2, streamsConfig);
         when(admin.createTopics(Set.of(newTopic1, newTopic2)))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
-                mkEntry(topic1, createTopicSuccessfulFuture),
-                mkEntry(topic2, createTopicFailFuture1)
+                    mkEntry(topic1, createTopicSuccessfulFuture),
+                    mkEntry(topic2, createTopicFailFuture1)
             )));
         when(admin.createTopics(Set.of(newTopic2)))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
-                mkEntry(topic3, createTopicSuccessfulFuture)
+                    mkEntry(topic3, createTopicSuccessfulFuture)
             )));
         final KafkaFutureImpl<Void> deleteTopicSuccessfulFuture = new KafkaFutureImpl<>();
         deleteTopicSuccessfulFuture.complete(null);
@@ -506,10 +507,10 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockDeleteTopicsResult(mkMap(mkEntry(topic1, deleteTopicSuccessfulFuture))));
 
         assertThrows(
-            IllegalStateException.class,
-            () -> topicManager.setup(mkMap(
-                mkEntry(topic1, internalTopicConfig1),
-                mkEntry(topic2, internalTopicConfig2)
+                IllegalStateException.class,
+                () -> topicManager.setup(mkMap(
+                    mkEntry(topic1, internalTopicConfig1),
+                    mkEntry(topic2, internalTopicConfig2)
             ))
         );
     }
@@ -519,7 +520,7 @@ public class InternalTopicManagerTest {
         final AdminClient admin = mock(AdminClient.class);
         final StreamsConfig streamsConfig = new StreamsConfig(config);
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
         );
         final InternalTopicManager topicManager = new InternalTopicManager(time, admin, streamsConfig);
         final InternalTopicConfig internalTopicConfig1 = setupRepartitionTopicConfig(topic1, 1);
@@ -528,14 +529,14 @@ public class InternalTopicManagerTest {
         createTopicFailFuture1.completeExceptionally(new TopicExistsException("exists"));
         final KafkaFutureImpl<TopicMetadataAndConfig> createTopicSuccessfulFuture = new KafkaFutureImpl<>();
         createTopicSuccessfulFuture.complete(
-            new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
+                new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
         );
         final NewTopic newTopic1 = newTopic(topic1, internalTopicConfig1, streamsConfig);
         final NewTopic newTopic2 = newTopic(topic2, internalTopicConfig2, streamsConfig);
         when(admin.createTopics(Set.of(newTopic1, newTopic2)))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
-                mkEntry(topic1, createTopicSuccessfulFuture),
-                mkEntry(topic2, createTopicFailFuture1)
+                    mkEntry(topic1, createTopicSuccessfulFuture),
+                    mkEntry(topic2, createTopicFailFuture1)
             )));
         final KafkaFutureImpl<TopicMetadataAndConfig> createTopicFutureThatNeverCompletes = new KafkaFutureImpl<>();
         when(admin.createTopics(Set.of(newTopic2)))
@@ -546,10 +547,10 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockDeleteTopicsResult(mkMap(mkEntry(topic1, deleteTopicSuccessfulFuture))));
 
         assertThrows(
-            TimeoutException.class,
-            () -> topicManager.setup(mkMap(
-                mkEntry(topic1, internalTopicConfig1),
-                mkEntry(topic2, internalTopicConfig2)
+                TimeoutException.class,
+                () -> topicManager.setup(mkMap(
+                    mkEntry(topic1, internalTopicConfig1),
+                    mkEntry(topic2, internalTopicConfig2)
             ))
         );
     }
@@ -585,10 +586,10 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockDeleteTopicsResult(mkMap(mkEntry(topic1, deleteTopicSuccessfulFuture))));
 
         assertThrows(
-            StreamsException.class,
-            () -> topicManager.setup(mkMap(
-                mkEntry(topic1, internalTopicConfig1),
-                mkEntry(topic2, internalTopicConfig2)
+                StreamsException.class,
+                () -> topicManager.setup(mkMap(
+                    mkEntry(topic1, internalTopicConfig1),
+                    mkEntry(topic2, internalTopicConfig2)
             ))
         );
     }
@@ -598,7 +599,7 @@ public class InternalTopicManagerTest {
         final AdminClient admin = mock(AdminClient.class);
         final StreamsConfig streamsConfig = new StreamsConfig(config);
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
         );
         final InternalTopicManager topicManager = new InternalTopicManager(time, admin, streamsConfig);
         final InternalTopicConfig internalTopicConfig1 = setupRepartitionTopicConfig(topic1, 1);
@@ -609,10 +610,10 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockDeleteTopicsResult(mkMap(mkEntry(topic1, deleteTopicFutureThatNeverCompletes))));
 
         assertThrows(
-            TimeoutException.class,
-            () -> topicManager.setup(mkMap(
-                mkEntry(topic1, internalTopicConfig1),
-                mkEntry(topic2, internalTopicConfig2)
+                TimeoutException.class,
+                () -> topicManager.setup(mkMap(
+                    mkEntry(topic1, internalTopicConfig1),
+                    mkEntry(topic2, internalTopicConfig2)
             ))
         );
     }
@@ -631,10 +632,10 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockDeleteTopicsResult(mkMap(mkEntry(topic1, deleteTopicFailFuture))));
 
         assertThrows(
-            StreamsException.class,
-            () -> topicManager.setup(mkMap(
-                mkEntry(topic1, internalTopicConfig1),
-                mkEntry(topic2, internalTopicConfig2)
+                StreamsException.class,
+                () -> topicManager.setup(mkMap(
+                    mkEntry(topic1, internalTopicConfig1),
+                    mkEntry(topic2, internalTopicConfig2)
             ))
         );
     }
@@ -646,40 +647,40 @@ public class InternalTopicManagerTest {
         createTopicFailFuture2.completeExceptionally(new IllegalStateException("Nobody expects the Spanish inquisition"));
         final KafkaFutureImpl<TopicMetadataAndConfig> createTopicSuccessfulFuture = new KafkaFutureImpl<>();
         createTopicSuccessfulFuture.complete(
-            new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
+                new TopicMetadataAndConfig(Uuid.randomUuid(), 1, 1, new Config(Collections.emptyList()))
         );
         final NewTopic newTopic1 = newTopic(topic1, internalTopicConfig1, streamsConfig);
         final NewTopic newTopic2 = newTopic(topic2, internalTopicConfig2, streamsConfig);
         when(admin.createTopics(Set.of(newTopic1, newTopic2)))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
-                mkEntry(topic1, createTopicSuccessfulFuture),
-                mkEntry(topic2, createTopicFailFuture1)
+                    mkEntry(topic1, createTopicSuccessfulFuture),
+                    mkEntry(topic2, createTopicFailFuture1)
             )));
         when(admin.createTopics(Set.of(newTopic2)))
             .thenAnswer(answer -> new MockCreateTopicsResult(mkMap(
-                mkEntry(topic2, createTopicFailFuture2)
+                    mkEntry(topic2, createTopicFailFuture2)
             )));
     }
 
     @Test
     public void shouldReturnCorrectPartitionCounts() {
         mockAdminClient.addTopic(
-            false,
-            topic1,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList())),
-            null);
+                false,
+                topic1,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList())),
+                null);
         assertEquals(Collections.singletonMap(topic1, 1),
-            internalTopicManager.getNumPartitions(Collections.singleton(topic1), Collections.emptySet()));
+                internalTopicManager.getNumPartitions(Collections.singleton(topic1), Collections.emptySet()));
     }
 
     @Test
     public void shouldReturnCorrectPartitionInfo() {
         final TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList());
         mockAdminClient.addTopic(
-            false,
-            topic1,
-            Collections.singletonList(topicPartitionInfo),
-            null);
+                false,
+                topic1,
+                Collections.singletonList(topicPartitionInfo),
+                null);
 
         final Map<String, List<TopicPartitionInfo>> ret = internalTopicManager.getTopicPartitionInfo(Collections.singleton(topic1));
         assertEquals(Collections.singletonMap(topic1, Collections.singletonList(topicPartitionInfo)), ret);
@@ -703,36 +704,36 @@ public class InternalTopicManagerTest {
 
         assertEquals(Set.of(topic1, topic2, topic3, topic4), mockAdminClient.listTopics().names().get());
         assertEquals(
-            new TopicDescription(
-                topic1,
-                false,
-                List.of(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                new TopicDescription(
+                    topic1,
+                    false,
+                    List.of(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
             ),
-            mockAdminClient.describeTopics(Collections.singleton(topic1)).topicNameValues().get(topic1).get()
+                mockAdminClient.describeTopics(Collections.singleton(topic1)).topicNameValues().get(topic1).get()
         );
         assertEquals(
-            new TopicDescription(
-                topic2,
-                false,
-                List.of(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                new TopicDescription(
+                    topic2,
+                    false,
+                    List.of(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
             ),
-            mockAdminClient.describeTopics(Collections.singleton(topic2)).topicNameValues().get(topic2).get()
+                mockAdminClient.describeTopics(Collections.singleton(topic2)).topicNameValues().get(topic2).get()
         );
         assertEquals(
-            new TopicDescription(
-                topic3,
-                false,
-                List.of(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                new TopicDescription(
+                    topic3,
+                    false,
+                    List.of(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
             ),
-            mockAdminClient.describeTopics(Collections.singleton(topic3)).topicNameValues().get(topic3).get()
+                mockAdminClient.describeTopics(Collections.singleton(topic3)).topicNameValues().get(topic3).get()
         );
         assertEquals(
-            new TopicDescription(
-                topic4,
-                false,
-                List.of(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
+                new TopicDescription(
+                    topic4,
+                    false,
+                    List.of(new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()))
             ),
-            mockAdminClient.describeTopics(Collections.singleton(topic4)).topicNameValues().get(topic4).get()
+                mockAdminClient.describeTopics(Collections.singleton(topic4)).topicNameValues().get(topic4).get()
         );
 
         final ConfigResource resource = new ConfigResource(ConfigResource.Type.TOPIC, topic1);
@@ -741,20 +742,20 @@ public class InternalTopicManagerTest {
         final ConfigResource resource4 = new ConfigResource(ConfigResource.Type.TOPIC, topic4);
 
         assertEquals(
-            new ConfigEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_DELETE),
-            mockAdminClient.describeConfigs(Collections.singleton(resource)).values().get(resource).get().get(TopicConfig.CLEANUP_POLICY_CONFIG)
+                new ConfigEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_DELETE),
+                mockAdminClient.describeConfigs(Collections.singleton(resource)).values().get(resource).get().get(TopicConfig.CLEANUP_POLICY_CONFIG)
         );
         assertEquals(
-            new ConfigEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT),
-            mockAdminClient.describeConfigs(Collections.singleton(resource2)).values().get(resource2).get().get(TopicConfig.CLEANUP_POLICY_CONFIG)
+                new ConfigEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT),
+                mockAdminClient.describeConfigs(Collections.singleton(resource2)).values().get(resource2).get().get(TopicConfig.CLEANUP_POLICY_CONFIG)
         );
         assertEquals(
-            new ConfigEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT + "," + TopicConfig.CLEANUP_POLICY_DELETE),
-            mockAdminClient.describeConfigs(Collections.singleton(resource3)).values().get(resource3).get().get(TopicConfig.CLEANUP_POLICY_CONFIG)
+                new ConfigEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT + "," + TopicConfig.CLEANUP_POLICY_DELETE),
+                mockAdminClient.describeConfigs(Collections.singleton(resource3)).values().get(resource3).get().get(TopicConfig.CLEANUP_POLICY_CONFIG)
         );
         assertEquals(
-            new ConfigEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT),
-            mockAdminClient.describeConfigs(Collections.singleton(resource4)).values().get(resource4).get().get(TopicConfig.CLEANUP_POLICY_CONFIG)
+                new ConfigEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT),
+                mockAdminClient.describeConfigs(Collections.singleton(resource4)).values().get(resource4).get().get(TopicConfig.CLEANUP_POLICY_CONFIG)
         );
     }
 
@@ -762,17 +763,17 @@ public class InternalTopicManagerTest {
     public void shouldCompleteTopicValidationOnRetry() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final TopicPartitionInfo partitionInfo = new TopicPartitionInfo(0, broker1,
-            Collections.singletonList(broker1), Collections.singletonList(broker1));
+                Collections.singletonList(broker1), Collections.singletonList(broker1));
 
         final KafkaFutureImpl<TopicDescription> topicDescriptionSuccessFuture = new KafkaFutureImpl<>();
         final KafkaFutureImpl<TopicDescription> topicDescriptionFailFuture = new KafkaFutureImpl<>();
         topicDescriptionSuccessFuture.complete(
-            new TopicDescription(topic1, false, Collections.singletonList(partitionInfo), Collections.emptySet())
+                new TopicDescription(topic1, false, Collections.singletonList(partitionInfo), Collections.emptySet())
         );
         topicDescriptionFailFuture.completeExceptionally(new UnknownTopicOrPartitionException("KABOOM!"));
 
@@ -789,7 +790,7 @@ public class InternalTopicManagerTest {
 
         when(admin.createTopics(Collections.singleton(new NewTopic(topic2, Optional.of(1), Optional.of((short) 1))
             .configs(mkMap(mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT),
-                                 mkEntry(TopicConfig.MESSAGE_TIMESTAMP_TYPE_CONFIG, "CreateTime"))))))
+                    mkEntry(TopicConfig.MESSAGE_TIMESTAMP_TYPE_CONFIG, "CreateTime"))))))
             .thenAnswer(answer -> new MockCreateTopicsResult(Collections.singletonMap(topic2, topicCreationFuture)));
         when(admin.describeTopics(Set.of(topic2)))
                 .thenAnswer(answer -> new MockDescribeTopicsResult(Collections.singletonMap(topic2, topicDescriptionSuccessFuture)));
@@ -799,21 +800,21 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig topic2Config = new UnwindowedUnversionedChangelogTopicConfig(topic2, Collections.emptyMap());
         topic2Config.setNumberOfPartitions(1);
         topicManager.makeReady(mkMap(
-            mkEntry(topic1, topicConfig),
-            mkEntry(topic2, topic2Config)
+                mkEntry(topic1, topicConfig),
+                mkEntry(topic2, topic2Config)
         ));
     }
 
     @Test
     public void shouldNotCreateTopicIfExistsWithDifferentPartitions() {
         mockAdminClient.addTopic(
-            false,
-            topic1,
-            List.of(
-                new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList()),
-                new TopicPartitionInfo(1, broker1, singleReplica, Collections.emptyList())
+                false,
+                topic1,
+                List.of(
+                    new TopicPartitionInfo(0, broker1, singleReplica, Collections.emptyList()),
+                    new TopicPartitionInfo(1, broker1, singleReplica, Collections.emptyList())
             ),
-            null
+                null
         );
 
         try {
@@ -827,16 +828,16 @@ public class InternalTopicManagerTest {
     @Test
     public void shouldNotThrowExceptionIfExistsWithDifferentReplication() {
         mockAdminClient.addTopic(
-            false,
-            topic1,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList())),
-            null);
+                false,
+                topic1,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList())),
+                null);
 
         // attempt to create it again with replication 1
         final InternalTopicManager internalTopicManager2 = new InternalTopicManager(
-            time,
-            mockAdminClient,
-            new StreamsConfig(config)
+                time,
+                mockAdminClient,
+                new StreamsConfig(config)
         );
 
         final InternalTopicConfig internalTopicConfig = new RepartitionTopicConfig(topic1, Collections.emptyMap());
@@ -869,19 +870,20 @@ public class InternalTopicManagerTest {
                     "This can happen if the Kafka cluster is temporarily not available."));
         }
     }
+
     @Test
     public void shouldLogWhenTopicNotFoundAndNotThrowException() {
         mockAdminClient.addTopic(
-            false,
-            topic1,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList())),
-            null);
+                false,
+                topic1,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList())),
+                null);
 
         final InternalTopicConfig internalTopicConfig = new RepartitionTopicConfig(topic1, Collections.emptyMap());
         internalTopicConfig.setNumberOfPartitions(1);
 
         final InternalTopicConfig internalTopicConfigII =
-            new RepartitionTopicConfig("internal-topic", Collections.emptyMap());
+                new RepartitionTopicConfig("internal-topic", Collections.emptyMap());
         internalTopicConfigII.setNumberOfPartitions(1);
 
         final Map<String, InternalTopicConfig> topicConfigMap = new HashMap<>();
@@ -893,9 +895,9 @@ public class InternalTopicManagerTest {
             internalTopicManager.makeReady(topicConfigMap);
 
             assertThat(
-                appender.getMessages(),
-                hasItem("stream-thread [" + threadName + "] Topic internal-topic is unknown or not found, hence not existed yet.\n" +
-                    "Error message was: org.apache.kafka.common.errors.UnknownTopicOrPartitionException: Topic internal-topic not found.")
+                    appender.getMessages(),
+                    hasItem("stream-thread [" + threadName + "] Topic internal-topic is unknown or not found, hence not existed yet.\n" +
+                        "Error message was: org.apache.kafka.common.errors.UnknownTopicOrPartitionException: Topic internal-topic not found.")
             );
         }
     }
@@ -904,9 +906,9 @@ public class InternalTopicManagerTest {
     public void shouldCreateTopicWhenTopicLeaderNotAvailableAndThenTopicNotFound() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
 
         final KafkaFutureImpl<TopicDescription> topicDescriptionLeaderNotAvailableFuture = new KafkaFutureImpl<>();
@@ -918,17 +920,17 @@ public class InternalTopicManagerTest {
 
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(
-                Collections.singletonMap(topic1, topicDescriptionLeaderNotAvailableFuture)));
+                    Collections.singletonMap(topic1, topicDescriptionLeaderNotAvailableFuture)));
         // we would not need to call create-topics for the first time
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(
-                Collections.singletonMap(topic1, topicDescriptionUnknownTopicFuture)));
+                    Collections.singletonMap(topic1, topicDescriptionUnknownTopicFuture)));
         when(admin.createTopics(Collections.singleton(
                 new NewTopic(topic1, Optional.of(1), Optional.of((short) 1))
-            .configs(mkMap(mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_DELETE),
-                mkEntry(TopicConfig.MESSAGE_TIMESTAMP_TYPE_CONFIG, "CreateTime"),
-                mkEntry(TopicConfig.SEGMENT_BYTES_CONFIG, "52428800"),
-                mkEntry(TopicConfig.RETENTION_MS_CONFIG, "-1"))))))
+                        .configs(mkMap(mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_DELETE),
+                    mkEntry(TopicConfig.MESSAGE_TIMESTAMP_TYPE_CONFIG, "CreateTime"),
+                    mkEntry(TopicConfig.SEGMENT_BYTES_CONFIG, "52428800"),
+                    mkEntry(TopicConfig.RETENTION_MS_CONFIG, "-1"))))))
             .thenAnswer(answer -> new MockCreateTopicsResult(Collections.singletonMap(topic1, topicCreationFuture)));
 
         final InternalTopicConfig internalTopicConfig = new RepartitionTopicConfig(topic1, Collections.emptyMap());
@@ -940,9 +942,9 @@ public class InternalTopicManagerTest {
     public void shouldCompleteValidateWhenTopicLeaderNotAvailableAndThenDescribeSuccess() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final TopicPartitionInfo partitionInfo = new TopicPartitionInfo(0, broker1,
                 Collections.singletonList(broker1), Collections.singletonList(broker1));
@@ -951,15 +953,15 @@ public class InternalTopicManagerTest {
         topicDescriptionFailFuture.completeExceptionally(new LeaderNotAvailableException("Leader Not Available!"));
         final KafkaFutureImpl<TopicDescription> topicDescriptionSuccessFuture = new KafkaFutureImpl<>();
         topicDescriptionSuccessFuture.complete(
-            new TopicDescription(topic1, false, Collections.singletonList(partitionInfo), Collections.emptySet())
+                new TopicDescription(topic1, false, Collections.singletonList(partitionInfo), Collections.emptySet())
         );
 
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(
-                Collections.singletonMap(topic1, topicDescriptionFailFuture)));
+                    Collections.singletonMap(topic1, topicDescriptionFailFuture)));
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(
-                Collections.singletonMap(topic1, topicDescriptionSuccessFuture)));
+                    Collections.singletonMap(topic1, topicDescriptionSuccessFuture)));
 
         final InternalTopicConfig internalTopicConfig = new RepartitionTopicConfig(topic1, Collections.emptyMap());
         internalTopicConfig.setNumberOfPartitions(1);
@@ -970,12 +972,12 @@ public class InternalTopicManagerTest {
     public void shouldThrowExceptionWhenKeepsTopicLeaderNotAvailable() {
         final AdminClient admin = mock(AdminClient.class);
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 15
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 15
         );
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
 
         final KafkaFutureImpl<TopicDescription> topicDescriptionFailFuture = new KafkaFutureImpl<>();
@@ -984,49 +986,49 @@ public class InternalTopicManagerTest {
         // simulate describeTopics got LeaderNotAvailableException
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(
-                Collections.singletonMap(topic1, topicDescriptionFailFuture)));
+                    Collections.singletonMap(topic1, topicDescriptionFailFuture)));
 
         final InternalTopicConfig internalTopicConfig = new RepartitionTopicConfig(topic1, Collections.emptyMap());
         internalTopicConfig.setNumberOfPartitions(1);
 
         final TimeoutException exception = assertThrows(
-            TimeoutException.class,
-            () -> topicManager.makeReady(Collections.singletonMap(topic1, internalTopicConfig))
+                TimeoutException.class,
+                () -> topicManager.makeReady(Collections.singletonMap(topic1, internalTopicConfig))
         );
         assertNull(exception.getCause());
         assertThat(
-            exception.getMessage(),
-            equalTo("MakeReady timeout: Could not create topics within 50 milliseconds." +
-                " This can happen if the Kafka cluster is temporarily not available.")
+                exception.getMessage(),
+                equalTo("MakeReady timeout: Could not create topics within 50 milliseconds." +
+                    " This can happen if the Kafka cluster is temporarily not available.")
         );
     }
 
     @Test
     public void shouldExhaustRetriesOnMarkedForDeletionTopic() {
         mockAdminClient.addTopic(
-            false,
-            topic1,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList())),
-            null);
+                false,
+                topic1,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList())),
+                null);
         mockAdminClient.markTopicForDeletion(topic1);
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 15
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 15
         );
 
         final InternalTopicManager internalTopicManager =
-            new InternalTopicManager(time, mockAdminClient, new StreamsConfig(config));
+                new InternalTopicManager(time, mockAdminClient, new StreamsConfig(config));
         final InternalTopicConfig internalTopicConfig = new RepartitionTopicConfig(topic1, Collections.emptyMap());
         internalTopicConfig.setNumberOfPartitions(1);
 
         final TimeoutException exception = assertThrows(
-            TimeoutException.class,
-            () -> internalTopicManager.makeReady(Collections.singletonMap(topic1, internalTopicConfig))
+                TimeoutException.class,
+                () -> internalTopicManager.makeReady(Collections.singletonMap(topic1, internalTopicConfig))
         );
         assertNull(exception.getCause());
         assertThat(
-            exception.getMessage(),
-            equalTo("MakeReady timeout: Could not create topics within 50 milliseconds." +
-                " This can happen if the Kafka cluster is temporarily not available.")
+                exception.getMessage(),
+                equalTo("MakeReady timeout: Could not create topics within 50 milliseconds." +
+                    " This can happen if the Kafka cluster is temporarily not available.")
         );
     }
 
@@ -1038,8 +1040,8 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig2 = setupRepartitionTopicConfig(topic2, 1);
 
         final ValidationResult validationResult = internalTopicManager.validate(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(topic2, internalTopicConfig2)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(topic2, internalTopicConfig2)
         ));
 
         assertThat(validationResult.missingTopics(), empty());
@@ -1066,9 +1068,9 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig3 = setupRepartitionTopicConfig(missingTopic2, 1);
 
         final ValidationResult validationResult = internalTopicManager.validate(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(missingTopic1, internalTopicConfig2),
-            mkEntry(missingTopic2, internalTopicConfig3)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(missingTopic1, internalTopicConfig2),
+                mkEntry(missingTopic2, internalTopicConfig3)
         ));
 
         final Set<String> missingTopics = validationResult.missingTopics();
@@ -1088,9 +1090,9 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig3 = setupRepartitionTopicConfig(topic3, 1);
 
         final ValidationResult validationResult = internalTopicManager.validate(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(topic2, internalTopicConfig2),
-            mkEntry(topic3, internalTopicConfig3)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(topic2, internalTopicConfig2),
+                mkEntry(topic3, internalTopicConfig3)
         ));
 
         final Map<String, List<String>> misconfigurationsForTopics = validationResult.misconfigurationsForTopics();
@@ -1099,14 +1101,14 @@ public class InternalTopicManagerTest {
         assertThat(misconfigurationsForTopics, hasKey(topic1));
         assertThat(misconfigurationsForTopics.get(topic1).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic1).get(0),
-            is("Internal topic " + topic1 + " requires 2 partitions, but the existing topic on the broker has 1 partitions.")
+                misconfigurationsForTopics.get(topic1).get(0),
+                is("Internal topic " + topic1 + " requires 2 partitions, but the existing topic on the broker has 1 partitions.")
         );
         assertThat(misconfigurationsForTopics, hasKey(topic2));
         assertThat(misconfigurationsForTopics.get(topic2).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic2).get(0),
-            is("Internal topic " + topic2 + " requires 3 partitions, but the existing topic on the broker has 1 partitions.")
+                misconfigurationsForTopics.get(topic2).get(0),
+                is("Internal topic " + topic2 + " requires 3 partitions, but the existing topic on the broker has 1 partitions.")
         );
         assertThat(misconfigurationsForTopics, not(hasKey(topic3)));
     }
@@ -1115,14 +1117,14 @@ public class InternalTopicManagerTest {
     public void shouldReportMisconfigurationsOfCleanupPolicyForUnwindowedUnversionedChangelogTopics() {
         final Map<String, String> unwindowedUnversionedChangelogConfigWithDeleteCleanupPolicy = unwindowedUnversionedChangelogConfig();
         unwindowedUnversionedChangelogConfigWithDeleteCleanupPolicy.put(
-            TopicConfig.CLEANUP_POLICY_CONFIG,
-            TopicConfig.CLEANUP_POLICY_DELETE
+                TopicConfig.CLEANUP_POLICY_CONFIG,
+                TopicConfig.CLEANUP_POLICY_DELETE
         );
         setupTopicInMockAdminClient(topic1, unwindowedUnversionedChangelogConfigWithDeleteCleanupPolicy);
         final Map<String, String> unwindowedUnversionedChangelogConfigWithDeleteCompactCleanupPolicy = unwindowedUnversionedChangelogConfig();
         unwindowedUnversionedChangelogConfigWithDeleteCompactCleanupPolicy.put(
-            TopicConfig.CLEANUP_POLICY_CONFIG,
-            TopicConfig.CLEANUP_POLICY_COMPACT + "," + TopicConfig.CLEANUP_POLICY_DELETE
+                TopicConfig.CLEANUP_POLICY_CONFIG,
+                TopicConfig.CLEANUP_POLICY_COMPACT + "," + TopicConfig.CLEANUP_POLICY_DELETE
         );
         setupTopicInMockAdminClient(topic2, unwindowedUnversionedChangelogConfigWithDeleteCompactCleanupPolicy);
         setupTopicInMockAdminClient(topic3, unwindowedUnversionedChangelogConfig());
@@ -1131,9 +1133,9 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig3 = setupUnwindowedUnversionedChangelogTopicConfig(topic3, 1);
 
         final ValidationResult validationResult = internalTopicManager.validate(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(topic2, internalTopicConfig2),
-            mkEntry(topic3, internalTopicConfig3)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(topic2, internalTopicConfig2),
+                mkEntry(topic3, internalTopicConfig3)
         ));
 
         final Map<String, List<String>> misconfigurationsForTopics = validationResult.misconfigurationsForTopics();
@@ -1142,16 +1144,16 @@ public class InternalTopicManagerTest {
         assertThat(misconfigurationsForTopics, hasKey(topic1));
         assertThat(misconfigurationsForTopics.get(topic1).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic1).get(0),
-            is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic " + topic1 + " should not contain \""
-                + TopicConfig.CLEANUP_POLICY_DELETE + "\".")
+                misconfigurationsForTopics.get(topic1).get(0),
+                is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic " + topic1 + " should not contain \""
+                    + TopicConfig.CLEANUP_POLICY_DELETE + "\".")
         );
         assertThat(misconfigurationsForTopics, hasKey(topic2));
         assertThat(misconfigurationsForTopics.get(topic2).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic2).get(0),
-            is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic " + topic2 + " should not contain \""
-                + TopicConfig.CLEANUP_POLICY_DELETE + "\".")
+                misconfigurationsForTopics.get(topic2).get(0),
+                is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic " + topic2 + " should not contain \""
+                    + TopicConfig.CLEANUP_POLICY_DELETE + "\".")
         );
         assertThat(misconfigurationsForTopics, not(hasKey(topic3)));
     }
@@ -1178,11 +1180,11 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig5 = setupWindowedChangelogTopicConfig(topic5, 1, retentionMs);
 
         final ValidationResult validationResult = internalTopicManager.validate(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(topic2, internalTopicConfig2),
-            mkEntry(topic3, internalTopicConfig3),
-            mkEntry(topic4, internalTopicConfig4),
-            mkEntry(topic5, internalTopicConfig5)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(topic2, internalTopicConfig2),
+                mkEntry(topic3, internalTopicConfig3),
+                mkEntry(topic4, internalTopicConfig4),
+                mkEntry(topic5, internalTopicConfig5)
         ));
 
         final Map<String, List<String>> misconfigurationsForTopics = validationResult.misconfigurationsForTopics();
@@ -1191,23 +1193,23 @@ public class InternalTopicManagerTest {
         assertThat(misconfigurationsForTopics, hasKey(topic2));
         assertThat(misconfigurationsForTopics.get(topic2).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic2).get(0),
-            is("Retention time (" + TopicConfig.RETENTION_MS_CONFIG + ") of existing internal topic " +
-                topic2 + " is " + shorterRetentionMs + " but should be " + retentionMs + " or larger.")
+                misconfigurationsForTopics.get(topic2).get(0),
+                is("Retention time (" + TopicConfig.RETENTION_MS_CONFIG + ") of existing internal topic " +
+                    topic2 + " is " + shorterRetentionMs + " but should be " + retentionMs + " or larger.")
         );
         assertThat(misconfigurationsForTopics, hasKey(topic4));
         assertThat(misconfigurationsForTopics.get(topic4).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic4).get(0),
-            is("Retention time (" + TopicConfig.RETENTION_MS_CONFIG + ") of existing internal topic " +
-                topic4 + " is " + shorterRetentionMs + " but should be " + retentionMs + " or larger.")
+                misconfigurationsForTopics.get(topic4).get(0),
+                is("Retention time (" + TopicConfig.RETENTION_MS_CONFIG + ") of existing internal topic " +
+                    topic4 + " is " + shorterRetentionMs + " but should be " + retentionMs + " or larger.")
         );
         assertThat(misconfigurationsForTopics, hasKey(topic5));
         assertThat(misconfigurationsForTopics.get(topic5).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic5).get(0),
-            is("Retention byte (" + TopicConfig.RETENTION_BYTES_CONFIG + ") of existing internal topic " +
-                topic5 + " is set but it should be unset.")
+                misconfigurationsForTopics.get(topic5).get(0),
+                is("Retention byte (" + TopicConfig.RETENTION_BYTES_CONFIG + ") of existing internal topic " +
+                    topic5 + " is set but it should be unset.")
         );
         assertThat(misconfigurationsForTopics, not(hasKey(topic1)));
         assertThat(misconfigurationsForTopics, not(hasKey(topic3)));
@@ -1231,10 +1233,10 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig4 = setupVersionedChangelogTopicConfig(topic4, 1, compactionLagMs);
 
         final ValidationResult validationResult = internalTopicManager.validate(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(topic2, internalTopicConfig2),
-            mkEntry(topic3, internalTopicConfig3),
-            mkEntry(topic4, internalTopicConfig4)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(topic2, internalTopicConfig2),
+                mkEntry(topic3, internalTopicConfig3),
+                mkEntry(topic4, internalTopicConfig4)
         ));
 
         final Map<String, List<String>> misconfigurationsForTopics = validationResult.misconfigurationsForTopics();
@@ -1243,23 +1245,23 @@ public class InternalTopicManagerTest {
         assertThat(misconfigurationsForTopics, hasKey(topic2));
         assertThat(misconfigurationsForTopics.get(topic2).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic2).get(0),
-            is("Min compaction lag (" + TopicConfig.MIN_COMPACTION_LAG_MS_CONFIG + ") of existing internal topic " +
-                topic2 + " is " + shorterCompactionLagMs + " but should be " + compactionLagMs + " or larger.")
+                misconfigurationsForTopics.get(topic2).get(0),
+                is("Min compaction lag (" + TopicConfig.MIN_COMPACTION_LAG_MS_CONFIG + ") of existing internal topic " +
+                    topic2 + " is " + shorterCompactionLagMs + " but should be " + compactionLagMs + " or larger.")
         );
         assertThat(misconfigurationsForTopics, hasKey(topic3));
         assertThat(misconfigurationsForTopics.get(topic3).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic3).get(0),
-            is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic " + topic3 + " should not contain \""
-                + TopicConfig.CLEANUP_POLICY_DELETE + "\".")
+                misconfigurationsForTopics.get(topic3).get(0),
+                is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic " + topic3 + " should not contain \""
+                    + TopicConfig.CLEANUP_POLICY_DELETE + "\".")
         );
         assertThat(misconfigurationsForTopics, hasKey(topic4));
         assertThat(misconfigurationsForTopics.get(topic4).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic4).get(0),
-            is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic " + topic4 + " should not contain \""
-                + TopicConfig.CLEANUP_POLICY_DELETE + "\".")
+                misconfigurationsForTopics.get(topic4).get(0),
+                is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic " + topic4 + " should not contain \""
+                    + TopicConfig.CLEANUP_POLICY_DELETE + "\".")
         );
         assertThat(misconfigurationsForTopics, not(hasKey(topic1)));
     }
@@ -1273,8 +1275,8 @@ public class InternalTopicManagerTest {
         setupTopicInMockAdminClient(topic2, repartitionTopicConfigCleanupPolicyCompact);
         final Map<String, String> repartitionTopicConfigCleanupPolicyCompactAndDelete = repartitionTopicConfig();
         repartitionTopicConfigCleanupPolicyCompactAndDelete.put(
-            TopicConfig.CLEANUP_POLICY_CONFIG,
-            TopicConfig.CLEANUP_POLICY_COMPACT + "," + TopicConfig.CLEANUP_POLICY_DELETE
+                TopicConfig.CLEANUP_POLICY_CONFIG,
+                TopicConfig.CLEANUP_POLICY_COMPACT + "," + TopicConfig.CLEANUP_POLICY_DELETE
         );
         setupTopicInMockAdminClient(topic3, repartitionTopicConfigCleanupPolicyCompactAndDelete);
         final Map<String, String> repartitionTopicConfigWithFiniteRetentionMs = repartitionTopicConfig();
@@ -1290,11 +1292,11 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig5 = setupRepartitionTopicConfig(topic5, 1);
 
         final ValidationResult validationResult = internalTopicManager.validate(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(topic2, internalTopicConfig2),
-            mkEntry(topic3, internalTopicConfig3),
-            mkEntry(topic4, internalTopicConfig4),
-            mkEntry(topic5, internalTopicConfig5)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(topic2, internalTopicConfig2),
+                mkEntry(topic3, internalTopicConfig3),
+                mkEntry(topic4, internalTopicConfig4),
+                mkEntry(topic5, internalTopicConfig5)
         ));
 
         final Map<String, List<String>> misconfigurationsForTopics = validationResult.misconfigurationsForTopics();
@@ -1303,30 +1305,30 @@ public class InternalTopicManagerTest {
         assertThat(misconfigurationsForTopics, hasKey(topic2));
         assertThat(misconfigurationsForTopics.get(topic2).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic2).get(0),
-            is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic "
-                + topic2 + " should not contain \"" + TopicConfig.CLEANUP_POLICY_COMPACT + "\".")
+                misconfigurationsForTopics.get(topic2).get(0),
+                is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic "
+                    + topic2 + " should not contain \"" + TopicConfig.CLEANUP_POLICY_COMPACT + "\".")
         );
         assertThat(misconfigurationsForTopics, hasKey(topic3));
         assertThat(misconfigurationsForTopics.get(topic3).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic3).get(0),
-            is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic "
-                + topic3 + " should not contain \"" + TopicConfig.CLEANUP_POLICY_COMPACT + "\".")
+                misconfigurationsForTopics.get(topic3).get(0),
+                is("Cleanup policy (" + TopicConfig.CLEANUP_POLICY_CONFIG + ") of existing internal topic "
+                    + topic3 + " should not contain \"" + TopicConfig.CLEANUP_POLICY_COMPACT + "\".")
         );
         assertThat(misconfigurationsForTopics, hasKey(topic4));
         assertThat(misconfigurationsForTopics.get(topic4).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic4).get(0),
-            is("Retention time (" + TopicConfig.RETENTION_MS_CONFIG + ") of existing internal topic "
-                + topic4 + " is " + retentionMs + " but should be -1.")
+                misconfigurationsForTopics.get(topic4).get(0),
+                is("Retention time (" + TopicConfig.RETENTION_MS_CONFIG + ") of existing internal topic "
+                    + topic4 + " is " + retentionMs + " but should be -1.")
         );
         assertThat(misconfigurationsForTopics, hasKey(topic5));
         assertThat(misconfigurationsForTopics.get(topic5).size(), is(1));
         assertThat(
-            misconfigurationsForTopics.get(topic5).get(0),
-            is("Retention byte (" + TopicConfig.RETENTION_BYTES_CONFIG + ") of existing internal topic "
-                + topic5 + " is set but it should be unset.")
+                misconfigurationsForTopics.get(topic5).get(0),
+                is("Retention byte (" + TopicConfig.RETENTION_BYTES_CONFIG + ") of existing internal topic "
+                    + topic5 + " is set but it should be unset.")
         );
     }
 
@@ -1340,7 +1342,7 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig1 = setupWindowedChangelogTopicConfig(topic1, 1, retentionMs);
 
         final ValidationResult validationResult = internalTopicManager.validate(mkMap(
-            mkEntry(topic1, internalTopicConfig1)
+                mkEntry(topic1, internalTopicConfig1)
         ));
 
         final Map<String, List<String>> misconfigurationsForTopics = validationResult.misconfigurationsForTopics();
@@ -1349,14 +1351,14 @@ public class InternalTopicManagerTest {
         assertThat(misconfigurationsForTopics, hasKey(topic1));
         assertThat(misconfigurationsForTopics.get(topic1).size(), is(2));
         assertThat(
-            misconfigurationsForTopics.get(topic1).get(0),
-            is("Retention time (" + TopicConfig.RETENTION_MS_CONFIG + ") of existing internal topic " +
-                topic1 + " is " + shorterRetentionMs + " but should be " + retentionMs + " or larger.")
+                misconfigurationsForTopics.get(topic1).get(0),
+                is("Retention time (" + TopicConfig.RETENTION_MS_CONFIG + ") of existing internal topic " +
+                    topic1 + " is " + shorterRetentionMs + " but should be " + retentionMs + " or larger.")
         );
         assertThat(
-            misconfigurationsForTopics.get(topic1).get(1),
-            is("Retention byte (" + TopicConfig.RETENTION_BYTES_CONFIG + ") of existing internal topic " +
-                topic1 + " is set but it should be unset.")
+                misconfigurationsForTopics.get(topic1).get(1),
+                is("Retention byte (" + TopicConfig.RETENTION_BYTES_CONFIG + ") of existing internal topic " +
+                    topic1 + " is set but it should be unset.")
         );
     }
 
@@ -1366,8 +1368,8 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig = new RepartitionTopicConfig(topic1, Collections.emptyMap());
 
         assertThrows(
-            IllegalStateException.class,
-            () -> internalTopicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
+                IllegalStateException.class,
+                () -> internalTopicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
         );
     }
 
@@ -1376,14 +1378,14 @@ public class InternalTopicManagerTest {
         setupTopicInMockAdminClient(topic1, repartitionTopicConfig());
         // attempt to create it again with replication 1
         final InternalTopicManager internalTopicManager2 = new InternalTopicManager(
-            time,
-            mockAdminClient,
-            new StreamsConfig(config)
+                time,
+                mockAdminClient,
+                new StreamsConfig(config)
         );
 
         final InternalTopicConfig internalTopicConfig = setupRepartitionTopicConfig(topic1, 1);
         final ValidationResult validationResult =
-            internalTopicManager2.validate(Collections.singletonMap(topic1, internalTopicConfig));
+                internalTopicManager2.validate(Collections.singletonMap(topic1, internalTopicConfig));
 
         assertThat(validationResult.missingTopics(), empty());
         assertThat(validationResult.misconfigurationsForTopics(), anEmptyMap());
@@ -1405,24 +1407,24 @@ public class InternalTopicManagerTest {
     public void shouldOnlyRetryDescribeTopicsWhenDescribeTopicsThrowsLeaderNotAvailableExceptionDuringValidation() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final KafkaFutureImpl<TopicDescription> topicDescriptionFailFuture = new KafkaFutureImpl<>();
         topicDescriptionFailFuture.completeExceptionally(new LeaderNotAvailableException("Leader Not Available!"));
         final KafkaFutureImpl<TopicDescription> topicDescriptionSuccessfulFuture = new KafkaFutureImpl<>();
         topicDescriptionSuccessfulFuture.complete(new TopicDescription(
-            topic1,
-            false,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
+                topic1,
+                false,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
         ));
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(mkEntry(topic1, topicDescriptionFailFuture))))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(mkEntry(topic1, topicDescriptionSuccessfulFuture))));
         final KafkaFutureImpl<Config> topicConfigSuccessfulFuture = new KafkaFutureImpl<>();
         topicConfigSuccessfulFuture.complete(
-            new Config(repartitionTopicConfig().entrySet().stream()
+                new Config(repartitionTopicConfig().entrySet().stream()
                 .map(entry -> new ConfigEntry(entry.getKey(), entry.getValue())).collect(Collectors.toSet()))
         );
         final ConfigResource topicResource = new ConfigResource(Type.TOPIC, topic1);
@@ -1440,15 +1442,15 @@ public class InternalTopicManagerTest {
     public void shouldOnlyRetryDescribeConfigsWhenDescribeConfigsThrowsLeaderNotAvailableExceptionDuringValidation() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final KafkaFutureImpl<TopicDescription> topicDescriptionSuccessfulFuture = new KafkaFutureImpl<>();
         topicDescriptionSuccessfulFuture.complete(new TopicDescription(
-            topic1,
-            false,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
+                topic1,
+                false,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
         ));
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(mkEntry(topic1, topicDescriptionSuccessfulFuture))));
@@ -1456,7 +1458,7 @@ public class InternalTopicManagerTest {
         topicConfigsFailFuture.completeExceptionally(new LeaderNotAvailableException("Leader Not Available!"));
         final KafkaFutureImpl<Config> topicConfigSuccessfulFuture = new KafkaFutureImpl<>();
         topicConfigSuccessfulFuture.complete(
-            new Config(repartitionTopicConfig().entrySet().stream()
+                new Config(repartitionTopicConfig().entrySet().stream()
                 .map(entry -> new ConfigEntry(entry.getKey(), entry.getValue())).collect(Collectors.toSet()))
         );
         final ConfigResource topicResource = new ConfigResource(Type.TOPIC, topic1);
@@ -1475,51 +1477,51 @@ public class InternalTopicManagerTest {
     public void shouldOnlyRetryNotSuccessfulFuturesDuringValidation() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final KafkaFutureImpl<TopicDescription> topicDescriptionFailFuture = new KafkaFutureImpl<>();
         topicDescriptionFailFuture.completeExceptionally(new LeaderNotAvailableException("Leader Not Available!"));
         final KafkaFutureImpl<TopicDescription> topicDescriptionSuccessfulFuture1 = new KafkaFutureImpl<>();
         topicDescriptionSuccessfulFuture1.complete(new TopicDescription(
-            topic1,
-            false,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
+                topic1,
+                false,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
         ));
         final KafkaFutureImpl<TopicDescription> topicDescriptionSuccessfulFuture2 = new KafkaFutureImpl<>();
         topicDescriptionSuccessfulFuture2.complete(new TopicDescription(
-            topic2,
-            false,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
+                topic2,
+                false,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
         ));
         when(admin.describeTopics(Set.of(topic1, topic2)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(
-                mkEntry(topic1, topicDescriptionSuccessfulFuture1),
-                mkEntry(topic2, topicDescriptionFailFuture)
+                    mkEntry(topic1, topicDescriptionSuccessfulFuture1),
+                    mkEntry(topic2, topicDescriptionFailFuture)
             )));
         when(admin.describeTopics(Set.of(topic2)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(
-                mkEntry(topic2, topicDescriptionSuccessfulFuture2)
+                    mkEntry(topic2, topicDescriptionSuccessfulFuture2)
             )));
         final KafkaFutureImpl<Config> topicConfigSuccessfulFuture = new KafkaFutureImpl<>();
         topicConfigSuccessfulFuture.complete(
-            new Config(repartitionTopicConfig().entrySet().stream()
+                new Config(repartitionTopicConfig().entrySet().stream()
                 .map(entry -> new ConfigEntry(entry.getKey(), entry.getValue())).collect(Collectors.toSet()))
         );
         final ConfigResource topicResource1 = new ConfigResource(Type.TOPIC, topic1);
         final ConfigResource topicResource2 = new ConfigResource(Type.TOPIC, topic2);
         when(admin.describeConfigs(Set.of(topicResource1, topicResource2)))
             .thenAnswer(answer -> new MockDescribeConfigsResult(mkMap(
-                mkEntry(topicResource1, topicConfigSuccessfulFuture),
-                mkEntry(topicResource2, topicConfigSuccessfulFuture)
+                    mkEntry(topicResource1, topicConfigSuccessfulFuture),
+                    mkEntry(topicResource2, topicConfigSuccessfulFuture)
             )));
         final InternalTopicConfig internalTopicConfig1 = setupRepartitionTopicConfig(topic1, 1);
         final InternalTopicConfig internalTopicConfig2 = setupRepartitionTopicConfig(topic2, 1);
 
         final ValidationResult validationResult = topicManager.validate(mkMap(
-            mkEntry(topic1, internalTopicConfig1),
-            mkEntry(topic2, internalTopicConfig2)
+                mkEntry(topic1, internalTopicConfig1),
+                mkEntry(topic2, internalTopicConfig2)
         ));
 
         assertThat(validationResult.missingTopics(), empty());
@@ -1530,9 +1532,9 @@ public class InternalTopicManagerTest {
     public void shouldThrowWhenDescribeTopicsThrowsUnexpectedExceptionDuringValidation() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final KafkaFutureImpl<TopicDescription> topicDescriptionFailFuture = new KafkaFutureImpl<>();
         topicDescriptionFailFuture.completeExceptionally(new IllegalStateException("Nobody expects the Spanish inquisition"));
@@ -1547,9 +1549,9 @@ public class InternalTopicManagerTest {
     public void shouldThrowWhenDescribeConfigsThrowsUnexpectedExceptionDuringValidation() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap()));
@@ -1567,15 +1569,15 @@ public class InternalTopicManagerTest {
     public void shouldThrowWhenTopicDescriptionsDoNotContainTopicDuringValidation() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final KafkaFutureImpl<TopicDescription> topicDescriptionSuccessfulFuture = new KafkaFutureImpl<>();
         topicDescriptionSuccessfulFuture.complete(new TopicDescription(
-            topic1,
-            false,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
+                topic1,
+                false,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
         ));
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(mkEntry(topic2, topicDescriptionSuccessfulFuture))));
@@ -1587,8 +1589,8 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig = setupRepartitionTopicConfig(topic1, 1);
 
         assertThrows(
-            IllegalStateException.class,
-            () -> topicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
+                IllegalStateException.class,
+                () -> topicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
         );
     }
 
@@ -1596,15 +1598,15 @@ public class InternalTopicManagerTest {
     public void shouldThrowWhenConfigDescriptionsDoNotContainTopicDuringValidation() {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final KafkaFutureImpl<TopicDescription> topicDescriptionSuccessfulFuture = new KafkaFutureImpl<>();
         topicDescriptionSuccessfulFuture.complete(new TopicDescription(
-            topic1,
-            false,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
+                topic1,
+                false,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
         ));
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(mkEntry(topic1, topicDescriptionSuccessfulFuture))));
@@ -1617,16 +1619,16 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig = setupRepartitionTopicConfig(topic1, 1);
 
         assertThrows(
-            IllegalStateException.class,
-            () -> topicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
+                IllegalStateException.class,
+                () -> topicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
         );
     }
 
     @Test
     public void shouldThrowWhenConfigDescriptionsDoNotCleanupPolicyForUnwindowedUnversionedConfigDuringValidation() {
         shouldThrowWhenConfigDescriptionsDoNotContainConfigDuringValidation(
-            setupUnwindowedUnversionedChangelogTopicConfig(topic1, 1),
-            configWithoutKey(unwindowedUnversionedChangelogConfig(), TopicConfig.CLEANUP_POLICY_CONFIG)
+                setupUnwindowedUnversionedChangelogTopicConfig(topic1, 1),
+                configWithoutKey(unwindowedUnversionedChangelogConfig(), TopicConfig.CLEANUP_POLICY_CONFIG)
         );
     }
 
@@ -1634,8 +1636,8 @@ public class InternalTopicManagerTest {
     public void shouldThrowWhenConfigDescriptionsDoNotContainCleanupPolicyForWindowedConfigDuringValidation() {
         final long retentionMs = 1000;
         shouldThrowWhenConfigDescriptionsDoNotContainConfigDuringValidation(
-            setupWindowedChangelogTopicConfig(topic1, 1, retentionMs),
-            configWithoutKey(windowedChangelogConfig(retentionMs), TopicConfig.CLEANUP_POLICY_CONFIG)
+                setupWindowedChangelogTopicConfig(topic1, 1, retentionMs),
+                configWithoutKey(windowedChangelogConfig(retentionMs), TopicConfig.CLEANUP_POLICY_CONFIG)
         );
     }
 
@@ -1643,8 +1645,8 @@ public class InternalTopicManagerTest {
     public void shouldThrowWhenConfigDescriptionsDoNotContainRetentionMsForWindowedConfigDuringValidation() {
         final long retentionMs = 1000;
         shouldThrowWhenConfigDescriptionsDoNotContainConfigDuringValidation(
-            setupWindowedChangelogTopicConfig(topic1, 1, retentionMs),
-            configWithoutKey(windowedChangelogConfig(retentionMs), TopicConfig.RETENTION_MS_CONFIG)
+                setupWindowedChangelogTopicConfig(topic1, 1, retentionMs),
+                configWithoutKey(windowedChangelogConfig(retentionMs), TopicConfig.RETENTION_MS_CONFIG)
         );
     }
 
@@ -1652,32 +1654,32 @@ public class InternalTopicManagerTest {
     public void shouldThrowWhenConfigDescriptionsDoNotContainRetentionBytesForWindowedConfigDuringValidation() {
         final long retentionMs = 1000;
         shouldThrowWhenConfigDescriptionsDoNotContainConfigDuringValidation(
-            setupWindowedChangelogTopicConfig(topic1, 1, retentionMs),
-            configWithoutKey(windowedChangelogConfig(retentionMs), TopicConfig.RETENTION_BYTES_CONFIG)
+                setupWindowedChangelogTopicConfig(topic1, 1, retentionMs),
+                configWithoutKey(windowedChangelogConfig(retentionMs), TopicConfig.RETENTION_BYTES_CONFIG)
         );
     }
 
     @Test
     public void shouldThrowWhenConfigDescriptionsDoNotContainCleanupPolicyForRepartitionConfigDuringValidation() {
         shouldThrowWhenConfigDescriptionsDoNotContainConfigDuringValidation(
-            setupRepartitionTopicConfig(topic1, 1),
-            configWithoutKey(repartitionTopicConfig(), TopicConfig.CLEANUP_POLICY_CONFIG)
+                setupRepartitionTopicConfig(topic1, 1),
+                configWithoutKey(repartitionTopicConfig(), TopicConfig.CLEANUP_POLICY_CONFIG)
         );
     }
 
     @Test
     public void shouldThrowWhenConfigDescriptionsDoNotContainRetentionMsForRepartitionConfigDuringValidation() {
         shouldThrowWhenConfigDescriptionsDoNotContainConfigDuringValidation(
-            setupRepartitionTopicConfig(topic1, 1),
-            configWithoutKey(repartitionTopicConfig(), TopicConfig.RETENTION_MS_CONFIG)
+                setupRepartitionTopicConfig(topic1, 1),
+                configWithoutKey(repartitionTopicConfig(), TopicConfig.RETENTION_MS_CONFIG)
         );
     }
 
     @Test
     public void shouldThrowWhenConfigDescriptionsDoNotContainRetentionBytesForRepartitionConfigDuringValidation() {
         shouldThrowWhenConfigDescriptionsDoNotContainConfigDuringValidation(
-            setupRepartitionTopicConfig(topic1, 1),
-            configWithoutKey(repartitionTopicConfig(), TopicConfig.RETENTION_BYTES_CONFIG)
+                setupRepartitionTopicConfig(topic1, 1),
+                configWithoutKey(repartitionTopicConfig(), TopicConfig.RETENTION_BYTES_CONFIG)
         );
     }
 
@@ -1692,15 +1694,15 @@ public class InternalTopicManagerTest {
                                                                                      final Config brokerSideTopicConfig) {
         final AdminClient admin = mock(AdminClient.class);
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final KafkaFutureImpl<TopicDescription> topicDescriptionSuccessfulFuture = new KafkaFutureImpl<>();
         topicDescriptionSuccessfulFuture.complete(new TopicDescription(
-            topic1,
-            false,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
+                topic1,
+                false,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList()))
         ));
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(mkEntry(topic1, topicDescriptionSuccessfulFuture))));
@@ -1711,8 +1713,8 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockDescribeConfigsResult(mkMap(mkEntry(topicResource1, topicConfigSuccessfulFuture))));
 
         assertThrows(
-            IllegalStateException.class,
-            () -> topicManager.validate(Collections.singletonMap(topic1, streamsSideTopicConfig))
+                IllegalStateException.class,
+                () -> topicManager.validate(Collections.singletonMap(topic1, streamsSideTopicConfig))
         );
     }
 
@@ -1720,12 +1722,12 @@ public class InternalTopicManagerTest {
     public void shouldThrowTimeoutExceptionWhenTimeoutIsExceededDuringValidation() {
         final AdminClient admin = mock(AdminClient.class);
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
         );
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final KafkaFutureImpl<TopicDescription> topicDescriptionFailFuture = new KafkaFutureImpl<>();
         topicDescriptionFailFuture.completeExceptionally(new TimeoutException());
@@ -1733,7 +1735,7 @@ public class InternalTopicManagerTest {
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(mkEntry(topic1, topicDescriptionFailFuture))));
         final KafkaFutureImpl<Config> topicConfigSuccessfulFuture = new KafkaFutureImpl<>();
         topicConfigSuccessfulFuture.complete(
-            new Config(repartitionTopicConfig().entrySet().stream()
+                new Config(repartitionTopicConfig().entrySet().stream()
                 .map(entry -> new ConfigEntry(entry.getKey(), entry.getValue())).collect(Collectors.toSet()))
         );
         final ConfigResource topicResource = new ConfigResource(Type.TOPIC, topic1);
@@ -1742,8 +1744,8 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig = setupRepartitionTopicConfig(topic1, 1);
 
         assertThrows(
-            TimeoutException.class,
-            () -> topicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
+                TimeoutException.class,
+                () -> topicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
         );
     }
 
@@ -1751,19 +1753,19 @@ public class InternalTopicManagerTest {
     public void shouldThrowTimeoutExceptionWhenFuturesNeverCompleteDuringValidation() {
         final AdminClient admin = mock(AdminClient.class);
         final MockTime time = new MockTime(
-            (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
+                (Integer) config.get(StreamsConfig.consumerPrefix(ConsumerConfig.MAX_POLL_INTERVAL_MS_CONFIG)) / 3
         );
         final InternalTopicManager topicManager = new InternalTopicManager(
-            time,
-            admin,
-            new StreamsConfig(config)
+                time,
+                admin,
+                new StreamsConfig(config)
         );
         final KafkaFutureImpl<TopicDescription> topicDescriptionFutureThatNeverCompletes = new KafkaFutureImpl<>();
         when(admin.describeTopics(Collections.singleton(topic1)))
             .thenAnswer(answer -> new MockDescribeTopicsResult(mkMap(mkEntry(topic1, topicDescriptionFutureThatNeverCompletes))));
         final KafkaFutureImpl<Config> topicConfigSuccessfulFuture = new KafkaFutureImpl<>();
         topicConfigSuccessfulFuture.complete(
-            new Config(repartitionTopicConfig().entrySet().stream()
+                new Config(repartitionTopicConfig().entrySet().stream()
                 .map(entry -> new ConfigEntry(entry.getKey(), entry.getValue())).collect(Collectors.toSet()))
         );
         final ConfigResource topicResource = new ConfigResource(Type.TOPIC, topic1);
@@ -1772,8 +1774,8 @@ public class InternalTopicManagerTest {
         final InternalTopicConfig internalTopicConfig = setupRepartitionTopicConfig(topic1, 1);
 
         assertThrows(
-            TimeoutException.class,
-            () -> topicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
+                TimeoutException.class,
+                () -> topicManager.validate(Collections.singletonMap(topic1, internalTopicConfig))
         );
     }
 
@@ -1781,57 +1783,57 @@ public class InternalTopicManagerTest {
                               final InternalTopicConfig topicConfig,
                               final StreamsConfig streamsConfig) {
         return new NewTopic(
-            topicName,
-            topicConfig.numberOfPartitions(),
-            Optional.of(streamsConfig.getInt(StreamsConfig.REPLICATION_FACTOR_CONFIG).shortValue())
+                topicName,
+                topicConfig.numberOfPartitions(),
+                Optional.of(streamsConfig.getInt(StreamsConfig.REPLICATION_FACTOR_CONFIG).shortValue())
         ).configs(topicConfig.properties(
-            Collections.emptyMap(),
-            streamsConfig.getLong(StreamsConfig.WINDOW_STORE_CHANGE_LOG_ADDITIONAL_RETENTION_MS_CONFIG))
+                Collections.emptyMap(),
+                streamsConfig.getLong(StreamsConfig.WINDOW_STORE_CHANGE_LOG_ADDITIONAL_RETENTION_MS_CONFIG))
         );
     }
 
     private Map<String, String> repartitionTopicConfig() {
         return mkMap(
-            mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_DELETE),
-            mkEntry(TopicConfig.RETENTION_MS_CONFIG, "-1"),
-            mkEntry(TopicConfig.RETENTION_BYTES_CONFIG, null)
+                mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_DELETE),
+                mkEntry(TopicConfig.RETENTION_MS_CONFIG, "-1"),
+                mkEntry(TopicConfig.RETENTION_BYTES_CONFIG, null)
         );
     }
 
     private Map<String, String> unwindowedUnversionedChangelogConfig() {
         return mkMap(
-            mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT)
+                mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT)
         );
     }
 
     private Map<String, String> windowedChangelogConfig(final long retentionMs) {
         return mkMap(
-            mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT + "," + TopicConfig.CLEANUP_POLICY_DELETE),
-            mkEntry(TopicConfig.RETENTION_MS_CONFIG, String.valueOf(retentionMs)),
-            mkEntry(TopicConfig.RETENTION_BYTES_CONFIG, null)
+                mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT + "," + TopicConfig.CLEANUP_POLICY_DELETE),
+                mkEntry(TopicConfig.RETENTION_MS_CONFIG, String.valueOf(retentionMs)),
+                mkEntry(TopicConfig.RETENTION_BYTES_CONFIG, null)
         );
     }
 
     private Map<String, String> versionedChangelogConfig(final long compactionLagMs) {
         return mkMap(
-            mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT),
-            mkEntry(TopicConfig.MIN_COMPACTION_LAG_MS_CONFIG, String.valueOf(compactionLagMs))
+                mkEntry(TopicConfig.CLEANUP_POLICY_CONFIG, TopicConfig.CLEANUP_POLICY_COMPACT),
+                mkEntry(TopicConfig.MIN_COMPACTION_LAG_MS_CONFIG, String.valueOf(compactionLagMs))
         );
     }
 
     private void setupTopicInMockAdminClient(final String topic, final Map<String, String> topicConfig) {
         mockAdminClient.addTopic(
-            false,
-            topic,
-            Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList())),
-            topicConfig
+                false,
+                topic,
+                Collections.singletonList(new TopicPartitionInfo(0, broker1, cluster, Collections.emptyList())),
+                topicConfig
         );
     }
 
     private InternalTopicConfig setupUnwindowedUnversionedChangelogTopicConfig(final String topicName,
                                                                                final int partitionCount) {
         final InternalTopicConfig internalTopicConfig =
-            new UnwindowedUnversionedChangelogTopicConfig(topicName, Collections.emptyMap());
+                new UnwindowedUnversionedChangelogTopicConfig(topicName, Collections.emptyMap());
         internalTopicConfig.setNumberOfPartitions(partitionCount);
         return internalTopicConfig;
     }
@@ -1840,9 +1842,9 @@ public class InternalTopicManagerTest {
                                                                   final int partitionCount,
                                                                   final long retentionMs) {
         final InternalTopicConfig internalTopicConfig = new WindowedChangelogTopicConfig(
-            topicName,
-            mkMap(mkEntry(TopicConfig.RETENTION_MS_CONFIG, String.valueOf(retentionMs))),
-            10
+                topicName,
+                mkMap(mkEntry(TopicConfig.RETENTION_MS_CONFIG, String.valueOf(retentionMs))),
+                10
         );
         internalTopicConfig.setNumberOfPartitions(partitionCount);
         return internalTopicConfig;
@@ -1852,9 +1854,9 @@ public class InternalTopicManagerTest {
                                                                    final int partitionCount,
                                                                    final long compactionLagMs) {
         final InternalTopicConfig internalTopicConfig = new VersionedChangelogTopicConfig(
-            topicName,
-            mkMap(mkEntry(TopicConfig.MIN_COMPACTION_LAG_MS_CONFIG, String.valueOf(compactionLagMs))),
-            12
+                topicName,
+                mkMap(mkEntry(TopicConfig.MIN_COMPACTION_LAG_MS_CONFIG, String.valueOf(compactionLagMs))),
+                12
         );
         internalTopicConfig.setNumberOfPartitions(partitionCount);
         return internalTopicConfig;
